Plone: Install python-ldap via buildout, repegging bungenicms.policy version.

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -1,6 +1,8 @@
 [buildout]
 parts =
     lxml
+    openldap
+    python-ldap
     svneggs
     productdistros
     svnproducts
@@ -19,7 +21,7 @@ parts =
 
     
 extends = 
-#    http://dist.plone.org/release/3.3.3/versions.cfg
+    http://dist.plone.org/release/3.3.3/versions.cfg
     versions.cfg
 
 index = http://dist.bungeni.org:6543/plone
@@ -138,7 +140,6 @@ zcml =
 
 versions = versions
 
-
 [lxml]
 recipe = z3c.recipe.staticlxml
 egg = lxml
@@ -147,6 +148,18 @@ build-libxslt = true
 build-libxml2 = true
 libxslt-url = http://bungeni-portal.googlecode.com/files/libxslt-1.1.24.tar.gz
 libxml2-url = http://bungeni-portal.googlecode.com/files/libxml2-2.6.32.tar.gz
+
+[openldap]
+recipe = zc.recipe.cmmi
+url = ftp://gd.tuwien.ac.at/infosys/network/OpenLDAP/openldap-stable/openldap-stable-20100719.tgz
+extra_options = --with-sasl --with-tls --enable-slapd=no
+
+[python-ldap]
+recipe = zc.recipe.egg:custom
+egg = python-ldap
+include-dirs  = ${openldap:location}/include
+library-dirs  = ${openldap:location}/lib
+rpath = ${openldap:location}/lib
 
 [zope2]
 recipe = plone.recipe.zope2install
@@ -211,6 +224,7 @@ security-policy-implementation = python
 zserver-threads = 2
 environment-vars =
     PYTHON_EGG_CACHE ${buildout:directory}/var/.python-eggs
+    LD_LIBRARY_PATH ${openldap:location}/lib
 effective-user = admin    
 
 # If you want Zope to know about any additional eggs, list them here.
@@ -218,6 +232,7 @@ effective-user = admin
 # e.g. eggs = ${buildout:eggs} ${plone:eggs} my.package
 eggs =
     ${buildout:eggs}
+    ${python-ldap:egg}
 
 zcml=
     ${buildout:zcml}    
@@ -307,7 +322,7 @@ urls =
      http://odn.cynapse.com/svn/cynin/tags/cynin_3_2_1/src/ubify.recyclebin/ ubify.recyclebin
      http://odn.cynapse.com/svn/cynin/tags/cynin_3_2_1/src/ubify.xmlrpc/ ubify.xmlrpc
      http://odn.cynapse.com/svn/cynin/tags/cynin_3_2_1/src/ubify.ffxmpp/ ubify.ffxmpp
-     http://bungeni-portal.googlecode.com/svn/bungenicms.policy/trunk@7379  bungenicms.policy
+     http://bungeni-portal.googlecode.com/svn/bungenicms.policy/trunk@7419  bungenicms.policy
      http://bungeni-portal.googlecode.com/svn/bungenicms.theme/trunk/ bungenicms.theme
      http://svn.plone.org/svn/plone/sandbox/plone.maintemplate@36218 plone.maintemplate
      http://bungeni-portal.googlecode.com/svn/bungeni.plonepas/trunk/ bungeni.plonepas
