--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -45,7 +45,8 @@ virtualenv = 1.3.2
 WebOb = 0.9.5
 WSGIUtils = 0.7
 xappy = 0.5
-z3c.recipe.staticlxml = 0.7.1
+# 27/10/2010 - updating to 0.7.2 for 64 bit build compliance
+z3c.recipe.staticlxml = 0.7.2
 zc.buildout = 1.4.3
 zc.lockfile = 1.0.0
 zc.recipe.cmmi = 1.1.6
@@ -103,6 +104,8 @@ zope.app.apidoc = 3.6.5
 SQLAlchemy = 0.5.8
 appy = 0.5.4
 tidy = 0.2
+# 27/10/2010 - not sure if this should be _script or -script ..adding both just to be sure
+buildout-script = 0.2a1
 buildout_script = 0.2a1
 ClientForm = 0.2.10
 collective.recipe.omelette = 0.9
@@ -151,7 +154,8 @@ zope.app.content = 3.4.0a1
 zope.app.debug = 3.4.1
 zope.app.dependable = 3.4.0
 #deprecated zope.app.error switching to zope.error
-#zope.app.error = 3.4.1
+#update: 27/10/2010 - used by other packages in zope -- so adding the peg back in
+zope.app.error = 3.4.1
 zope.app.exception = 3.4.0a1
 zope.app.file = 3.5.0
 zope.app.generations = 3.4.0a1
