--- a/fabric/distro.ini
+++ b/fabric/distro.ini
@@ -52,7 +52,13 @@
     libtidy-dev  
     libldap2-dev
     libsasl2-dev
-    libssl-dev 
+    libssl-dev
+    ## new plone reqd 27/10/2010 ##
+    wv
+    poppler-utils
+    libdb-dev
+    libpq-dev
+
 
 10.04 = 
     wget
@@ -89,3 +95,4 @@
     wv
     poppler-utils
     libdb-dev
+    libpq-dev
