Updating diagrammer script generator : now has table of contents,index page

--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -254,11 +254,17 @@ content =
   mkdir -p ${buildout:directory}/docs
   ${buildout:bin-directory}/python ${buildout:directory}/src/bungeni.main/bungeni/core/workflows/dia.py ${buildout:directory}/docs
   dot -Tpng -O ${buildout:directory}/docs/*.dot
+  TOC_FILE=${buildout:directory}/docs/toc.txt
+  ${buildout:directory}/templates/docgen/tocgen.sh > $TOC_FILE
   for file in ${buildout:directory}/src/bungeni.main/bungeni/core/workflows/*.xml
   do
     pref=`basename $file .xml`
     java -jar ${buildout:directory}/templates/docgen/saxon9.jar $file ${buildout:directory}/templates/docgen/workflow.xsl > ${buildout:directory}/docs/$pref.html
+    INPUT_FILE=${buildout:directory}/docs/$pref.html
+    python ${buildout:directory}/templates/docgen/toc.py $TOC_FILE $INPUT_FILE
   done
+  cp ${buildout:directory}/templates/docgen/index.html ${buildout:directory}/docs
+
 
 
 
