Plone buildout: updated to load the workspaces product.

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -43,7 +43,7 @@ develop =
     ../src/ore.alchemist
     ../src/bungeni.main
     ../src/marginalia
-
+    src/Products.workspaces
 
 eggs =
     SQLAlchemy
@@ -111,6 +111,7 @@ eggs =
     bda.ldap
 
     Products.DocFinderTab
+    Products.workspaces
     bungenicms.theme
     bungenicms.cynintheme
     neteasy.plone.subnavbar
