Plone: Adding Collage product and related add-on products for use on the homepage; updated import script to import 'news folder'.

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -71,6 +71,7 @@ eggs =
     Products.AddRemoveWidget
     Products.CMFQuestionnaire
     Products.ContentWellPortlets
+    Products.Collage
     Products.DataGridField
     Products.FCKeditor
     Products.LinguaPlone
@@ -82,6 +83,9 @@ eggs =
     Products.SmartPrintNG
     Products.TinyMCE
     Products.whoopass
+    collective.collage.easyslider
+    collective.collage.portlets
+    collective.collage.rssdocument
     collective.facetednavigation
     collective.plonetruegallery
     collective.portlet.dropdownbox
@@ -89,7 +93,7 @@ eggs =
     collective.portlet.feedmixer
     quintagroup.portlet.static
     plone.portlet.static
-    iqpp.plone.commenting      
+    iqpp.plone.commenting
     webcouturier.dropdownmenu
     zopyx.convert
     repoze.who
@@ -136,7 +140,7 @@ zcml =
     bungenicms.theme
     bungenicms.cynintheme
     bungeni.portal
-    neteasy.plone.subnavbar       
+    neteasy.plone.subnavbar
 
 
 versions = versions
@@ -323,7 +327,7 @@ urls =
      http://odn.cynapse.com/svn/cynin/tags/cynin_3_2_1/src/ubify.recyclebin/ ubify.recyclebin
      http://odn.cynapse.com/svn/cynin/tags/cynin_3_2_1/src/ubify.xmlrpc/ ubify.xmlrpc
      http://odn.cynapse.com/svn/cynin/tags/cynin_3_2_1/src/ubify.ffxmpp/ ubify.ffxmpp
-     http://bungeni-portal.googlecode.com/svn/bungenicms.policy/trunk@7419  bungenicms.policy
+     http://bungeni-portal.googlecode.com/svn/bungenicms.policy/trunk@7521  bungenicms.policy
      http://bungeni-portal.googlecode.com/svn/bungenicms.theme/trunk/ bungenicms.theme
      http://svn.plone.org/svn/plone/sandbox/plone.maintemplate@36218 plone.maintemplate
      http://bungeni-portal.googlecode.com/svn/bungeni.plonepas/trunk/ bungeni.plonepas
