--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -8,6 +8,7 @@ elementtree = 1.2.6-20050316
 BeautifulSoup = 3.1.0.1
 Products.AddRemoveWidget = 1.4.1
 Products.CMFQuestionnaire = 0.6.2
+Products.Collage = 1.3.0-final
 Products.ContentWellPortlets = 1.1
 Products.DataGridField = 1.6
 Products.FCKeditor = 2.6.3.2
@@ -21,6 +22,10 @@ Products.Scrawl = 1.2
 Products.SmartPrintNG = 1.2.10
 Products.TinyMCE = 1.1rc8
 Products.whoopass = 0.2
+collective.collage.easyslider = 1.0.4
+collective.easyslider = 0.3.2
+collective.collage.portlets = 0.3
+collective.collage.rssdocument = 0.1
 collective.facetednavigation = 0.7
 setuptools = 0.6c11
 collective.plonetruegallery = 0.7b2.4
@@ -29,6 +34,7 @@ collective.portlet.explore = 1.0rc2
 collective.portlet.feedmixer = 1.3
 plone.portlet.static = 1.2rc1
 iqpp.plone.commenting = 0.5.beta.2
+iservices.rssdocument = 0.3
 webcouturier.dropdownmenu = 1.1.5
 zopyx.convert = 1.1.9
 repoze.who = 1.0.10
@@ -57,6 +63,7 @@ zope.interface = 3.5.1
 zope.dottedname = 3.4.5
 zope.security = 3.5.0
 Paste = 1.7.2
+z3c.form = 2.2.0
 z3c.pt = 1.0.0
 pysqlite = 2.5.6
 Deliverance = 0.3.0
