Plone: Adding jyu.rsslisting to the buildout for RSS feed display.

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -94,6 +94,7 @@ eggs =
     quintagroup.portlet.static
     plone.portlet.static
     iqpp.plone.commenting
+    jyu.rsslisting
     webcouturier.dropdownmenu
     zopyx.convert
     repoze.who
@@ -141,6 +142,7 @@ zcml =
     bungenicms.cynintheme
     bungeni.portal
     neteasy.plone.subnavbar
+    jyu.rsslisting
 
 
 versions = versions
