--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -34,6 +34,7 @@ collective.portlet.explore = 1.0rc2
 collective.portlet.feedmixer = 1.3
 plone.portlet.static = 1.2rc1
 iqpp.plone.commenting = 0.5.beta.2
+jyu.rsslisting = 1.0.1
 iservices.rssdocument = 0.3
 webcouturier.dropdownmenu = 1.1.5
 zopyx.convert = 1.1.9
