--- a/fabric/setup.ini
+++ b/fabric/setup.ini
@@ -1,20 +1,20 @@
 [global]
 # root folder for deployment
-system_root = /home/undesa
+system_root = /home/domash/testing
 # setting this to True does a secure checkout from svn using the provided username and password
-development_build = False
+development_build = True
 # when local cache is set to true, the local_index property is used to look for plone, bungeni,portal packages
 local_cache = False
 app_host = localhost
-supervisor_host = 0.0.0.0
+supervisor_host = 127.0.0.1
 #92.243.15.192 
 supervisor_port = 8888
 #explicitly specify distro section to use
 #distro_override = Ubuntu:10.04-gandi
 
 [scm]
-user=none.none
-pass=none
+user=Semargl89
+pass=tH2qG5NC8rb6
 # svn repo address without protocol prefix
 
 [python25]
@@ -47,6 +47,7 @@ theme = layout.html
 local_index=http://192.168.0.14:6543/plone
 repo=bungeni-portal.googlecode.com/svn/portal.buildout/trunk
 http_port=8080
+static_port=8083
 
 #### You should never need to update the below unless you are installing from a local cache ####
 #### i.e. relevant only if local_cache = True
