--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -9,10 +9,10 @@ BeautifulSoup = 3.1.0.1
 Products.AddRemoveWidget = 1.4.1
 Products.CMFQuestionnaire = 0.6.2
 Products.Collage = 1.3.0-final
-Products.ContentWellPortlets = 1.1
+Products.ContentWellPortlets = 2.1
 Products.DataGridField = 1.6
 Products.FCKeditor = 2.6.3.2
-Products.LinguaPlone = 2.4
+Products.LinguaPlone = 3.1a1
 Products.PloneKeywordManager = 1.6
 Products.PloneHelpCenter = 1.6.1
 Products.PlonePopoll = 2.7.0_beta2
@@ -35,7 +35,6 @@ collective.portlet.feedmixer = 1.3
 plone.portlet.static = 1.2rc1
 iqpp.plone.commenting = 0.5.beta.2
 jyu.rsslisting = 1.0.1
-iservices.rssdocument = 0.3
 webcouturier.dropdownmenu = 1.1.5
 zopyx.convert = 1.1.9
 repoze.who = 1.0.10
