--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -150,6 +150,13 @@ environment = environment
 extra-paths = 
   ${xapian:location}/lib/python
 
+# !+LOCALIZATION(mr, dec-2010) this is repeated here because it is also needed
+# by bungeni.models tests as without this zope.i18n.config.ALLOWED_LANGUAGES
+# will be None--but, this info should be in a (python or otherwise) file under
+# a deployment-specific localization folder.
+initialization =
+        import sys, os
+        os.environ["zope_i18n_allowed_languages"] = "en fr pt sw en-ke it"
 
 defaults = ['--tests-pattern', '^f?tests$', '-v']
 
