--- a/fabric/setup.ini
+++ b/fabric/setup.ini
@@ -48,6 +48,11 @@ local_index=http://192.168.0.14:6543/plone
 repo=bungeni-portal.googlecode.com/svn/portal.buildout/trunk
 http_port=8080
 static_port=8083
+## Next two parameters are for deployment purposes under
+## web server (e.g. Apache, Nginx ...). If you use instance without
+## it, just use app_host and portal http_port
+web_server_host = localhost
+web_server_port = 8080
 
 #### You should never need to update the below unless you are installing from a local cache ####
 #### i.e. relevant only if local_cache = True
