Factored out deployment-specific variables zope_i18n_allowed_languages and zope_i18n_compile_mo_files out of buildout.cfg and into bungeni_custom package. Corrected trunk sub-path in bungeni_custom package.

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -117,9 +117,11 @@ eggs =
        python-gettext
 
 initialization =
-        import sys, os
-        os.environ["zope_i18n_allowed_languages"] = "en fr pt sw en-ke it"
-        os.environ["zope_i18n_compile_mo_files"] = "1"
+    import os, bungeni_custom
+    os.environ["zope_i18n_allowed_languages"] = \
+        bungeni_custom.zope_i18n_allowed_languages
+    os.environ["zope_i18n_compile_mo_files"] = \
+        bungeni_custom.zope_i18n_compile_mo_files
 
 environment = environment
 
@@ -150,13 +152,10 @@ environment = environment
 extra-paths = 
   ${xapian:location}/lib/python
 
-# !+LOCALIZATION(mr, dec-2010) this is repeated here because it is also needed
-# by bungeni.models tests as without this zope.i18n.config.ALLOWED_LANGUAGES
-# will be None--but, this info should be in a (python or otherwise) file under
-# a deployment-specific localization folder.
 initialization =
-        import sys, os
-        os.environ["zope_i18n_allowed_languages"] = "en fr pt sw en-ke it"
+    import os, bungeni_custom
+    os.environ["zope_i18n_allowed_languages"] = \
+        bungeni_custom.zope_i18n_allowed_languages
 
 defaults = ['--tests-pattern', '^f?tests$', '-v']
 
