Updating setup.ini for fabric ; removed embedded user names and development_build = True

--- a/fabric/setup.ini
+++ b/fabric/setup.ini
@@ -1,8 +1,8 @@
 [global]
-# root folder for deployment
-system_root = /home/domash/testing
-# setting this to True does a secure checkout from svn using the provided username and password
-development_build = True
+# root folder for deployment - the cinst and cbild folders are created within the system_root
+system_root = /home/undesa
+# setting this to True does a secure checkout from svn using the provided username and password in [scm]
+development_build = False
 # when local cache is set to true, the local_index property is used to look for plone, bungeni,portal packages
 local_cache = False
 app_host = localhost
@@ -13,9 +13,9 @@ supervisor_port = 8888
 #distro_override = Ubuntu:10.04-gandi
 
 [scm]
-user=Semargl89
-pass=tH2qG5NC8rb6
-# svn repo address without protocol prefix
+#Required when development_build = True
+user=None
+pass=None
 
 [python25]
 # python 2.5 source download_url can also be a path to a local folder /home/file/folder/file....
