added section for creating folder for blob storage

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -63,7 +63,8 @@ parts =
       ipython
       omelette
       i18n
-      i18n-custom 
+      i18n-custom
+      filestorage
       
 find-links =
      http://pypi.python.org/pypi/SQLAlchemy
@@ -74,6 +75,7 @@ find-links =
      http://kapil.objectrealms.net/dist/
      http://dist.repoze.org/lemonade/dev/simple
      http://pypi.python.org/pypi/
+     http://pypi.python.org/pypi/z3c.recipe.mkdir/
      
 index = http://dist.bungeni.org:6543/bungeni
 
@@ -194,3 +196,6 @@ zcml =
     <include package="bungeni.ui" />
     <include package="bungeni.rest" />    
     
+[filestorage]
+recipe = z3c.recipe.mkdir
+paths = fs
