Updating documentation comment for web_server_host and web_server_port parameter

--- a/fabric/setup.ini
+++ b/fabric/setup.ini
@@ -49,8 +49,17 @@ repo=bungeni-portal.googlecode.com/svn/portal.buildout/trunk
 http_port=8080
 static_port=8083
 ## Next two parameters are for deployment purposes under
-## web server (e.g. Apache, Nginx ...). If you use instance without
-## it, just use app_host and portal http_port
+## web server (e.g. Apache, Nginx ...). 
+## Running in a development environment --- 
+## if in a development environment and not deploying behind 
+## a web server use app_host value for web_server_host ; and
+## use http_port value for web_server_port
+## 
+## Runing in a deployment environment ---
+## if you are deploying it behind a web server and a domain 
+## set web_server_host to the domain e.g. kenya.bungeni.org
+## set web_server_port to 80 -- which means you can now 
+## browse bungeni on http://kenya.bungeni.org/
 web_server_host = localhost
 web_server_port = 8080
 
