Pegging ore.yui to 0.5.3

--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -95,7 +95,7 @@ plone.memoize = 1.0.4
 ore.alchemist = 0.6.0
 ore.library = 0.5.1dev
 ore.transforms = 0.2.0
-ore.yui = 0.5.2a1
+ore.yui = 0.5.3
 ore.yuiwidget = 0.3.1
 zope.securitypolicy = 3.5.0
 hexagonit.recipe.download = 1.2.2
