Adding missing plone version pegs

--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -1,7 +1,10 @@
 [versions]
 
+### zope url version to use ####
+
 zope2-url = http://www.zope.org/Products/Zope/2.11.0/Zope-2.11.0-final.tar.gz
 
+### plone pegs ###
 
 Plone = 3.3.3
 elementtree = 1.2.6-20050316
@@ -216,6 +219,8 @@ zope.copypastemove = 3.5.1
 zope.app.security = 3.5.0
 HTTPEncode = 0.1
 
+### for static lxml ###
+
 httplib2 = 0.4.0
 RestrictedPython = 3.5.1
 zope.structuredtext = 3.5.0dev-plone.2
@@ -224,7 +229,7 @@ zc.recipe.cmmi = 1.1.6
 zc.recipe.egg = 1.2.2
 z3c.recipe.staticlxml = 0.7.1
 
-
+#### other products ####
 
 archetypes.schemaextender = 1.5
 Products.fatsyndication = 1.0.1
@@ -235,3 +240,26 @@ zope.schema = 3.5.4
 Products.SQLAlchemyDA = 0.5.0
 Products.DocFinderTab = 1.0.4
 neteasy.plone.subnavbar = 1.0.0_release
+
+#### missing version pegs -- added on 12-01-2011 ####
+
+bda.cache = 1.1.3
+bda.ldap = 1.4.0
+chameleon.html = 1.0b4
+cns.recipe.maildrophost = 1.5.2
+collective.recipe.backup = 1.3
+collective.recipe.i18noverrides = 0.4
+collective.recipe.omelette = 0.9
+five.pt = 0.7
+infrae.subversion = 1.4.5
+iservices.rssdocument = 0.3
+plone.recipe.command = 1.1
+plone.recipe.distros = 1.5
+Products.basesyndication = 1.0.0
+Products.PloneLDAP = 1.1
+py = 1.1.1
+python-ldap = 2.3.11
+quintagroup.portlet.static = 0.2
+z3c.recipe.runscript = 0.1.1
+zodict = 1.9.0
+
