Adding support for restoring attachments folder

--- a/fabric/setup.ini
+++ b/fabric/setup.ini
@@ -35,6 +35,8 @@ local_index=http://192.168.0.14:6543/bungeni
 repo=bungeni-portal.googlecode.com/svn/bungeni.buildout/trunk
 dump_file=dmp_undesa.txt
 http_port = 8081
+attachments_folder=fs
+attachments_archive=fs.tar.gz
 
 [plone]
 local_index=http://192.168.0.14:6543/bungeniplone
