--- a/fabric/setup.ini
+++ b/fabric/setup.ini
@@ -40,6 +40,7 @@ attachments_archive=fs.tar.gz
 
 [plone]
 local_index=http://192.168.0.14:6543/bungeniplone
+site_content=http://dist.bungeni.org/plone/import/import-0.1.tar.gz
 repo=bungeni-portal.googlecode.com/svn/plone.buildout/trunk
 http_port = 8082
 
