--- a/bungeni.buildout/trunk/who.ini
+++ b/bungeni.buildout/trunk/who.ini
@@ -43,7 +43,7 @@ plugins =
 [authenticators]
 # plugin_name;classifier_name.. or just plugin_name (good for any)
 plugins =
-      htpasswd
+#     htpasswd
       alchemist
 
 [challengers]
