Various : removing old demodata folder and loading scripts ; updated data dmp; added script to generate admin password

--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -12,15 +12,9 @@ platform_parts =
       db-shell 
       db-init 
       db-reset
-      db-load-data-sql
-      db-load-user-data-sql
-      db-load-custom-data-sql
-      db-load-custom-capetown-sql
-      db-load-data-script
-      db-load-capetown-data-script
-;;      deliverance
       psycopg2 
       diagrammer
+      admin-passwd
 ;;      jetty
 ;;      jetty-ctl 
 ;;      exist
@@ -61,46 +55,6 @@ template_dir = data/scripts
 recipe = buildout_script
 template = reset-db.in
 template_dir = data/scripts
-
-[db-load-data-sql]
-recipe = buildout_script
-template = load-demo-data.sql.in
-template_dir = data/demodata
-
-[db-load-user-data-sql]
-recipe = buildout_script
-template = user-created-data.sql.in
-template_dir = data/demodata
-
-[db-load-custom-data-sql]
-recipe = buildout_script
-template = custom.sql.in
-template_dir = data/demodata
-
-[db-load-custom-capetown-sql]
-recipe = buildout_script
-template = custom-capetown.sql.in
-template_dir = data/demodata
-
-
-[db-load-data-script]
-recipe = ore.recipe.fs:mkfile
-path = ${buildout:bin-directory}/load-demo-data
-mode = 0755
-content =
- #!/bin/sh
-    ${buildout:directory}/bin/psql bungeni < ${buildout:directory}/bin/load-demo-data.sql
-    ${buildout:directory}/bin/psql bungeni < ${buildout:directory}/bin/user-created-data.sql
-    ${buildout:directory}/bin/psql bungeni < ${buildout:directory}/bin/custom.sql
-
-[db-load-capetown-data-script]
-recipe = ore.recipe.fs:mkfile
-path = ${buildout:bin-directory}/load-capetown-demo-data
-mode = 0755
-content =
- #!/bin/sh
-    ${buildout:directory}/bin/psql bungeni < ${buildout:directory}/bin/load-demo-data.sql
-    ${buildout:directory}/bin/psql bungeni < ${buildout:directory}/bin/custom-capetown.sql
 
 
 [xapian]
@@ -264,6 +218,17 @@ content =
     python ${buildout:directory}/templates/docgen/toc.py $TOC_FILE $INPUT_FILE
   done
   cp ${buildout:directory}/templates/docgen/index.html ${buildout:directory}/docs
+
+
+[admin-passwd]
+recipe = ore.recipe.fs:mkfile
+mode = 0755
+path = ${buildout:bin-directory}/admin-passwd
+content =
+ #!/bin/sh
+  ${buildout:bin-directory}/bin/python ${buildout:directory}/data/scripts/admin-password.py
+
+
 
 
 
