Fixing path in admin-passwd section

--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -226,7 +226,7 @@ mode = 0755
 path = ${buildout:bin-directory}/admin-passwd
 content =
  #!/bin/sh
-  ${buildout:bin-directory}/bin/python ${buildout:directory}/data/scripts/admin-password.py
+  ${buildout:bin-directory}/python ${buildout:directory}/data/scripts/admin-password.py
 
 
 
