Moved custom/locales in to system_conf/i18n_locales .....

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -81,6 +81,8 @@ index = http://dist.bungeni.org:6543/bungeni
 
 versions = versions
 
+pyver = 2.6
+
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${buildout:eggs}
@@ -166,7 +168,7 @@ recipe = iw.recipe.cmd
 on_install = true
 on_update = true
 cmds =
-    cp ${buildout:directory}/custom/locales/*.xml ${buildout:directory}/eggs/zope.i18n-${versions:zope.i18n}-py2.5.egg/zope/i18n/locales/data
+    cp ${buildout:directory}/system_conf/i18n_locales/*.xml ${buildout:directory}/eggs/zope.i18n-${versions:zope.i18n}-py${buildout:pyver}.egg/zope/i18n/locales/data
 
       
 
