Factored out manual setting of python version in buildout ; this is determined at runtime by the buildout

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -81,7 +81,6 @@ index = http://dist.bungeni.org:6543/bungeni
 
 versions = versions
 
-pyver = 2.6
 
 [omelette]
 recipe = collective.recipe.omelette
@@ -168,9 +167,11 @@ recipe = iw.recipe.cmd
 on_install = true
 on_update = true
 cmds =
-    cp ${buildout:directory}/system_conf/i18n_locales/*.xml ${buildout:directory}/eggs/zope.i18n-${versions:zope.i18n}-py${buildout:pyver}.egg/zope/i18n/locales/data
+    export bo_py_ver=`${buildout:executable} -c 'import sys;print sys.version[:3]'`
+    export z3_egg=zope.i18n-${versions:zope.i18n}-py$bo_py_ver.egg
+    export z3_i18n=`find ${buildout:directory}/eggs -name $z3_egg`
+    cp ${buildout:directory}/system_conf/i18n_locales/*.xml $z3_i18n/zope/i18n/locales/data
 
-      
 
 [i18n]
 recipe = lovely.recipe:i18n
