Removing site.zcml and security.zcml from buildout root ; updated references to site.zcml in deploy and debug.ini

--- a/bungeni.buildout/trunk/deploy.ini
+++ b/bungeni.buildout/trunk/deploy.ini
@@ -11,7 +11,7 @@ log_level = warning
 
 [app:zope]
 use = egg:bungeni
-zcml = site.zcml
+zcml = src/bungeni.main/bungeni/site.zcml
 devmode = off
 
 [app:cache]
