Added log.ini which contains logging configuration for tests. See zope.testing.tesrunner.logsupport. Changed test buildout config to change working directory to root buildout directory.

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -147,6 +147,7 @@ scripts = ipython
 [test]
 # test runner 
 recipe = zc.recipe.testrunner
+working-directory = ./
 eggs = ${buildout:eggs}  
        psycopg2
 
