Updated buildout, replacing utidylib with pytidylib

--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -102,8 +102,7 @@ hexagonit.recipe.download = 1.2.2
 zope.traversing = 3.7.2
 zope.app.apidoc = 3.6.5
 SQLAlchemy = 0.5.8
-appy = 0.5.4
-tidy = 0.2
+pytidylib = 0.2.1
 # 27/10/2010 - not sure if this should be _script or -script ..adding both just to be sure
 buildout-script = 0.2a1
 buildout_script = 0.2a1
