--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -51,8 +51,7 @@ eggs =
       zope.app.zapi
       evoque
       qpy
-      appy
-      tidy
+      pytidylib
       python-dateutil
 
 parts = 
@@ -66,7 +65,7 @@ parts =
       i18n-custom
       filestorage
       
-find-links =
+find-links = http://cloud.github.com/downloads/countergram/pytidylib/pytidylib-0.2.1.tar.gz
      http://pypi.python.org/pypi/SQLAlchemy
      http://dist.bungeni.org/
      http://download.zope.org/ppix/
@@ -76,6 +75,7 @@ find-links =
      http://dist.repoze.org/lemonade/dev/simple
      http://pypi.python.org/pypi/
      http://pypi.python.org/pypi/z3c.recipe.mkdir/
+     
      
 index = http://dist.bungeni.org:6543/bungeni
 
