Updating buildout.cfg ; moving packages from find-links to dist.bungeni.org

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -64,16 +64,12 @@ parts =
       i18n-custom
       filestorage
       
-find-links = http://cloud.github.com/downloads/countergram/pytidylib/pytidylib-0.2.1.tar.gz
-     http://pypi.python.org/pypi/SQLAlchemy
-     http://dist.bungeni.org/
-     http://download.zope.org/ppix/
+find-links = 
+     http://dist.bungeni.org/bungeni/
      http://download.zope.org/distribution/
      http://effbot.org/downloads
-     http://kapil.objectrealms.net/dist/
      http://dist.repoze.org/lemonade/dev/simple
      http://pypi.python.org/pypi/
-     http://pypi.python.org/pypi/z3c.recipe.mkdir/
      
      
 index = http://dist.bungeni.org:6543/bungeni
