--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -210,3 +210,5 @@ qpy = 1.8
 ##used by the buildout i18n-custom
 iw.recipe.cmd = 0.3
 z3c.recipe.mkdir = 0.3.1
+imsvdex = 1.0
+elementtreewriter = 1.1
