--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -115,11 +115,9 @@ eggs =
        python-gettext
 
 initialization =
-    import os, bungeni_custom
-    os.environ["zope_i18n_allowed_languages"] = \
-        bungeni_custom.zope_i18n_allowed_languages
-    os.environ["zope_i18n_compile_mo_files"] = \
-        bungeni_custom.zope_i18n_compile_mo_files
+    from bungeni.utils.capi import capi
+    capi.put_env("zope_i18n_allowed_languages")
+    capi.put_env("zope_i18n_compile_mo_files")
 
 environment = environment
 
@@ -152,9 +150,8 @@ extra-paths =
   ${xapian:location}/lib/python
 
 initialization =
-    import os, bungeni_custom
-    os.environ["zope_i18n_allowed_languages"] = \
-        bungeni_custom.zope_i18n_allowed_languages
+    from bungeni.utils.capi import capi
+    capi.put_env("zope_i18n_allowed_languages")
 
 defaults = ['--tests-pattern', '^f?tests$', '-v']
 
