fixed 'diagrammer' action to use correct path to workflow xml; added form-xml-restore script to restore original ui.xml in bungeni_custom'

--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -14,6 +14,7 @@ platform_parts =
       db-reset
       psycopg2 
       diagrammer
+      form-xml-restore
       admin-passwd
 ;;      jetty
 ;;      jetty-ctl 
@@ -210,7 +211,7 @@ content =
   dot -Tpng -O ${buildout:directory}/docs/*.dot
   TOC_FILE=${buildout:directory}/docs/toc.txt
   ${buildout:directory}/templates/docgen/tocgen.sh > $TOC_FILE
-  for file in ${buildout:directory}/src/bungeni.main/bungeni/core/workflows/*.xml
+  for file in ${buildout:directory}/src/bungeni_custom/workflows/*.xml
   do
     pref=`basename $file .xml`
     java -jar ${buildout:directory}/templates/docgen/saxon9.jar $file ${buildout:directory}/templates/docgen/workflow.xsl > ${buildout:directory}/docs/$pref.html
@@ -218,6 +219,15 @@ content =
     python ${buildout:directory}/templates/docgen/toc.py $TOC_FILE $INPUT_FILE
   done
   cp ${buildout:directory}/templates/docgen/index.html ${buildout:directory}/docs
+
+
+[form-xml-restore]
+recipe = ore.recipe.fs:mkfile
+mode = 0755
+path = ${buildout:bin-directory}/form-xml-restore
+content =
+  #!/bin/sh
+  ${buildout:bin-directory}/python ${buildout:directory}/src/bungeni.main/bungeni/ui/descriptor/localization.py
 
 
 [admin-passwd]
