--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -210,8 +210,9 @@ content =
   ${buildout:bin-directory}/python ${buildout:directory}/src/bungeni.main/bungeni/core/workflows/dia.py ${buildout:directory}/docs
   dot -Tpng -O ${buildout:directory}/docs/*.dot
   TOC_FILE=${buildout:directory}/docs/toc.txt
+  CUSTOM_PATH=`${buildout:bin-directory}/python -c'from bungeni.utils.capi import capi;print capi.get_root_path()'`
   ${buildout:directory}/templates/docgen/tocgen.sh > $TOC_FILE
-  for file in ${buildout:directory}/src/bungeni_custom/workflows/*.xml
+  for file in $CUSTOM_PATH/workflows/*.xml
   do
     pref=`basename $file .xml`
     java -jar ${buildout:directory}/templates/docgen/saxon9.jar $file ${buildout:directory}/templates/docgen/workflow.xsl > ${buildout:directory}/docs/$pref.html
