--- a/plone.buildout/branches/plone4.1/buildout.cfg
+++ b/plone.buildout/branches/plone4.1/buildout.cfg
@@ -5,18 +5,16 @@ extends =
 
 parts =
     lxml
-    pil
     svneggs
     svnproducts
     instance
+    plonesite
     paster
 
 versions = versions
 
 find-links =
-    http://dist.plone.org/release/4.1b1/
-    http://download.zope.org/Zope2/index/2.13.5
-
+    http://dist.bungeni.org:6543/plone
 
 develop =
     ../src/alchemist.catalyst
@@ -40,13 +38,17 @@ eggs =
     bungenicms.policy 
     bungenicms.theme
     psycopg2
+    Products.Scrawl
+    collective.contacts
 
  
 zcml = 
     bungeni.plonepas
-    bungenicms.policy 
+    bungenicms.policy
     bungenicms.theme
     bungeni.portal
+    collective.contacts
+    
 
 
 [instance]
@@ -54,7 +56,6 @@ recipe = plone.recipe.zope2instance
 user = ploneadmin:ploneadmin
 eggs =
     ${buildout:eggs}
-    PIL
     Plone    
     Paste
     PasteScript
@@ -79,12 +80,6 @@ build-libxml2 = true
 libxslt-url = http://bungeni-portal.googlecode.com/files/libxslt-1.1.24.tar.gz
 libxml2-url = http://bungeni-portal.googlecode.com/files/libxml2-2.6.32.tar.gz
 
-[pil]
-recipe = zc.recipe.egg
-index = http://dist.repoze.org/legacy/simple/PIL/
-eggs = PIL==1.1.6
-
-
 [svnproducts]
 recipe = infrae.subversion
 urls =
@@ -96,9 +91,16 @@ recipe = infrae.subversion
 as_eggs = true
 urls =
     http://bungeni-portal.googlecode.com/svn/bungeni.plonepas/trunk/ bungeni.plonepas
-    http://bungeni-portal.googlecode.com/svn/bungenicms.policy/trunk@7521  bungenicms.policy
+    http://bungeni-portal.googlecode.com/svn/bungenicms.policy/trunk/  bungenicms.policy
     http://bungeni-portal.googlecode.com/svn/bungenicms.theme/trunk/ bungenicms.theme
     http://svn.plone.org/svn/collective/Products.PloneHelpCenter/branches/plone4 Products.PloneHelpCenter    
+    
+[plonesite]
+recipe = collective.recipe.plonesite
+site-id = plone
+admin-user = ploneadmin
+instance = instance
+
 
 [paster]
 recipe = zc.recipe.egg
