Plone products required for the site are now installed during the buildout run; removing 'zope.conf' from the buildout, it will instead be auto-generated by the fabric setup scripts.

--- a/plone.buildout/branches/plone4.1/buildout.cfg
+++ b/plone.buildout/branches/plone4.1/buildout.cfg
@@ -100,6 +100,11 @@ recipe = collective.recipe.plonesite
 site-id = plone
 admin-user = ploneadmin
 instance = instance
+products-initial =
+    bungenicms.policy
+    bungenicms.theme    
+    LinguaPlone
+    BungeniHelpCenter
 
 
 [paster]
