Updating buildout i18n generation location to bungeni root.

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -172,7 +172,7 @@ eggs = ${app:eggs}
 package = bungeni
 domain = bungeni
 output = locales
-location = src/bungeni/core
+location = src/bungeni.main/bungeni
 extra-paths = 
   ${xapian:location}/lib/python
 
