Plone build: removing obsolete file, updates to versions.cfg.

--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -464,6 +464,6 @@ Products.LinguaPlone = 4.0.2
 Products.Scrawl = 2.0b1
 collective.contacts = 1.4.5
 Products.ATExtensions = 1.1a3
-bungeni.dhtmlxscheduler = 0.9.0
+zdhtmlxscheduler = 0.9.0
 imsvdex = 1.0
 elementtreewriter = 1.1
