Updating workflow documentation generator for new workflow structure; renders notes, better toc, index of states, transitions, reference to like_state

--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -211,7 +211,7 @@ content =
   dot -Tpng -O ${buildout:directory}/docs/*.dot
   TOC_FILE=${buildout:directory}/docs/toc.txt
   CUSTOM_PATH=`${buildout:bin-directory}/python -c'from bungeni.utils.capi import capi;print capi.get_root_path()'`
-  ${buildout:directory}/templates/docgen/tocgen.sh > $TOC_FILE
+  ${buildout:directory}/templates/docgen/tocgen.sh $CUSTOM_PATH > $TOC_FILE
   for file in $CUSTOM_PATH/workflows/*.xml
   do
     pref=`basename $file .xml`
