Plone build: reinstating zope.documenttemplate, including ploned.ui.

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -21,6 +21,7 @@ develop =
     ../src/alchemist.security
     ../src/ore.alchemist
     ../src/bungeni.main
+    ../src/ploned.ui    
     ../src/marginalia
 
 
@@ -34,6 +35,7 @@ eggs =
     bungeni
     alchemist.catalyst
     alchemist.security
+    ploned.ui
     bungeni.plonepas
     bungenicms.policy 
     bungenicms.theme
