--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -14,6 +14,7 @@ py = 1.3.4
 repoze.recipe.egg = 0.3
 z3c.coverage = 1.2.0
 collective.recipe.plonesite = 1.4.1
+collective.recipe.updateplone = 0.3
 
 ## Overrides
 # Fixes some test failures introduced while fixing __unicode__ support
@@ -220,9 +221,7 @@ zope.tales = 3.5.1
 #########zope.testing = 3.9.5
 zope.traversing = 3.13
 zope.viewlet = 3.7.2
-
-# Deprecating
-#zope.documenttemplate = 3.4.2
+zope.documenttemplate = 3.4.2
 
 # Dependencies
 # Needed for the mechanize 0.1.x.
@@ -467,3 +466,4 @@ Products.ATExtensions = 1.1a3
 zdhtmlxscheduler = 0.9.0
 imsvdex = 1.0
 elementtreewriter = 1.1
+isotoma.recipe.plonetools = 0.0.7
