Updating i18n generation script target directory.

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -167,7 +167,7 @@ recipe = lovely.recipe:i18n
 eggs = ${app:eggs}
 package = bungeni
 domain = bungeni
-output = locales
+output = ${buildout:directory}/src/bungeni_custom/translations/bungeni
 location = src/bungeni.main/bungeni
 extra-paths = 
   ${xapian:location}/lib/python
