Plone: Adding PIL to the build, removed automatic plone site creation, updates to workspaces product and renaming of the product.

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -5,10 +5,10 @@ extends =
 
 parts =
     lxml
+    pil
     svneggs
     svnproducts
     instance
-    plonesite
     paster
 
 versions = versions
@@ -23,6 +23,7 @@ develop =
     ../src/bungeni.main
     ../src/ploned.ui    
     ../src/marginalia
+    ./src/bungenicms.workspaces
 
 
 eggs =
@@ -42,6 +43,7 @@ eggs =
     psycopg2
     Products.Scrawl
     collective.contacts
+    bungenicms.workspaces
 
  
 zcml = 
@@ -50,14 +52,15 @@ zcml =
     bungenicms.theme
     bungeni.portal
     collective.contacts
+    bungenicms.workspaces
     
-
 
 [instance]
 recipe = plone.recipe.zope2instance
 user = ploneadmin:ploneadmin
 eggs =
     ${buildout:eggs}
+    PIL
     Plone    
     Paste
     PasteScript
@@ -82,6 +85,11 @@ build-libxml2 = true
 libxslt-url = http://bungeni-portal.googlecode.com/files/libxslt-1.1.24.tar.gz
 libxml2-url = http://bungeni-portal.googlecode.com/files/libxml2-2.6.32.tar.gz
 
+[pil]
+recipe = zc.recipe.egg
+find-links = http://dist.repoze.org
+eggs = PIL==1.1.6
+
 [svnproducts]
 recipe = infrae.subversion
 urls =
@@ -96,17 +104,6 @@ urls =
     http://bungeni-portal.googlecode.com/svn/bungenicms.policy/trunk/  bungenicms.policy
     http://bungeni-portal.googlecode.com/svn/bungenicms.theme/trunk/ bungenicms.theme
     http://svn.plone.org/svn/collective/Products.PloneHelpCenter/branches/plone4 Products.PloneHelpCenter    
-    
-[plonesite]
-recipe = collective.recipe.plonesite
-site-id = plone
-admin-user = ploneadmin
-instance = instance
-products-initial =
-    bungenicms.policy
-    bungenicms.theme    
-    LinguaPlone
-    BungeniHelpCenter
 
 
 [paster]
