Moving bungenicms.workspaces to the 'plone.products' folder, updates to the Plone buildout for the same.

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -23,7 +23,6 @@ develop =
     ../src/bungeni.main
     ../src/ploned.ui    
     ../src/marginalia
-    ./src/bungenicms.workspaces
 
 
 eggs =
@@ -43,7 +42,6 @@ eggs =
     psycopg2
     Products.Scrawl
     collective.contacts
-    bungenicms.workspaces
 
  
 zcml = 
@@ -52,7 +50,6 @@ zcml =
     bungenicms.theme
     bungeni.portal
     collective.contacts
-    bungenicms.workspaces
     
 
 [instance]
@@ -103,7 +100,8 @@ urls =
     http://bungeni-portal.googlecode.com/svn/bungeni.plonepas/trunk/ bungeni.plonepas
     http://bungeni-portal.googlecode.com/svn/bungenicms.policy/trunk/  bungenicms.policy
     http://bungeni-portal.googlecode.com/svn/bungenicms.theme/trunk/ bungenicms.theme
-    http://svn.plone.org/svn/collective/Products.PloneHelpCenter/branches/plone4 Products.PloneHelpCenter    
+    http://svn.plone.org/svn/collective/Products.PloneHelpCenter/branches/plone4 Products.PloneHelpCenter 
+    http://bungeni-portal.googlecode.com/svn/plone.products/bungenicms.workspaces/trunk/ bungenicms.workspaces   
 
 
 [paster]
