--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -399,10 +399,6 @@ Products.PloneHotfix20110720 = 1.1
 Products.ZSQLMethods = 2.13.3
 ore.yui = 0.5.3
 zope.app.publication = 3.8.0
-zope.app.publisher = 3.6.2
-#zope.app.wsgi = 3.5.2
-#zope.app.pagetemplate = 3.6.0
-#zope.app.form = 3.7.3
 zope.thread = 3.4
 repoze.cssutils = 1.0a6
 lxml = 2.2.6
@@ -467,3 +463,11 @@ zdhtmlxscheduler = 0.9.0
 imsvdex = 1.0
 elementtreewriter = 1.1
 isotoma.recipe.plonetools = 0.0.7
+collective.tabr = 1.2
+Products.ATVocabularyManager = 1.6.1
+collective.dynatree = 1.3.4
+collective.portlet.explore = 1.0
+z3c.json = 0.5.4
+collective.js.jqueryui = 1.8.13.1
+anz.dashboard = 0.62
+python-cjson = 1.0.5
