Changed versions of SQLAlchemy to 0.6.8 and psycopg to 2.4.2

--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -28,7 +28,8 @@ url = ftp://ftp.cs.tu-berlin.de/pub/misc/postgresql/v8.3.4/postgresql-8.3.4.tar.
 
 [psycopg2]
 recipe = zc.recipe.egg:custom
-find-links = http://www.initd.org/pub/software/psycopg/PSYCOPG-2-0/psycopg2-2.0.6.tar.gz
+find-links = http://initd.org/psycopg/tarballs/PSYCOPG-2-4/psycopg2-2.4.2.tar.gz
+#http://www.initd.org/pub/software/psycopg/PSYCOPG-2-0/psycopg2-2.0.6.tar.gz
 define = PSYCOPG_EXTENSIONS,PSYCOPG_DISPLAY_SIZE,PSYCOPG_NEW_BOOLEAN,HAVE_PQFREEMEM,HAVE_PQPROTOCOL3
 rpath = ${postgresql:location}/lib
 include-dirs = ${postgresql:location}/include
