Plone build fix: Explicit setting of the package index (now uses merged index). In addition the build is now stable by not allowing new package versions.

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -1,5 +1,7 @@
 [buildout]
+newest = false
 allow-picked-versions = false 
+index = http://dist.bungeni.org/bungeni
 extends =
     versions.cfg  
 
@@ -14,7 +16,7 @@ parts =
 versions = versions
 
 find-links =
-    http://dist.bungeni.org:6543/plone
+    http://dist.bungeni.org/bungeni
 
 develop =
     ../src/alchemist.catalyst
