Plone build: Additional functionality for plone homepage: portlets, gallery and rss feed reader.

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -54,6 +54,13 @@ eggs =
     collective.js.jqueryui            
     anz.dashboard
     python-cjson
+    Products.Collage
+    collective.plonetruegallery 
+    collective.collage.plonetruegallery
+    collective.collage.portlets
+    collective.portlet.feedmixer
+
+
 
  
 zcml = 
@@ -66,6 +73,10 @@ zcml =
     collective.tabr
     collective.portlet.explore
     anz.dashboard
+    collective.portlet.feedmixer
+
+
+
     
 
 [instance]
