--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -30,7 +30,7 @@ Markdown = 2.0.3
 PIL = 1.1.6
 Unidecode = 0.04.1
 elementtree = 1.2.7-20070827-preview
-feedparser = 4.1
+FeedParser = 4.1
 mailinglogger = 3.3.3
 python-dateutil = 1.5
 python-openid = 2.2.5
@@ -472,3 +472,8 @@ collective.js.jqueryui = 1.8.13.1
 anz.dashboard = 0.62
 python-cjson = 1.0.5
 zope.sqlalchemy = 0.6.1
+Products.Collage = 1.3.6
+collective.collage.plonetruegallery = 1.0b1
+collective.plonetruegallery =  1.2.1
+collective.collage.portlets = 0.3.1
+collective.portlet.feedmixer = 1.5
