Plone build:Upgrade to Plone 4.1

--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -3,11 +3,10 @@ newest = false
 allow-picked-versions = false 
 index = http://dist.bungeni.org/bungeni
 extends =
-    versions.cfg  
+    versions.cfg      
 
 parts =
     lxml
-    pil
     svneggs
     svnproducts
     instance
@@ -19,23 +18,26 @@ find-links =
     http://dist.bungeni.org/bungeni
 
 develop =
-    ../src/alchemist.catalyst
-    ../src/alchemist.security
-    ../src/ore.alchemist
-    ../src/bungeni.main
-    ../src/ploned.ui    
-    ../src/marginalia
-
+      ../src/bungeni.main
+      ../src/ploned.ui
+      ../src/z3c.traverser
+      ../src/repoze.whooze
+      ../src/marginalia
+      ../src/ore.alchemist
+      ../src/alchemist.ui
+      ../src/alchemist.catalyst
+      ../src/alchemist.traversal
+      ../src/alchemist.security 
+      
 
 eggs =
-    Products.CMFPlone
-    plone.reload
-    roman 
-    Products.ZSQLMethods # currently required by Products.CMFCore
+    Plone
     Products.PloneHelpCenter
     Products.LinguaPlone
     bungeni
+    alchemist.ui
     alchemist.catalyst
+    alchemist.traversal
     alchemist.security
     ploned.ui
     bungeni.plonepas
@@ -84,8 +86,7 @@ recipe = plone.recipe.zope2instance
 user = ploneadmin:ploneadmin
 eggs =
     ${buildout:eggs}
-    PIL
-    Plone    
+    Products.CMFPlone 
     Paste
     PasteScript
     PasteDeploy
@@ -100,6 +101,7 @@ zcml =
 products = 
     ${svnproducts:location}
 
+
 [lxml]
 recipe = z3c.recipe.staticlxml
 egg = lxml
@@ -108,11 +110,6 @@ build-libxslt = true
 build-libxml2 = true
 libxslt-url = http://bungeni-portal.googlecode.com/files/libxslt-1.1.24.tar.gz
 libxml2-url = http://bungeni-portal.googlecode.com/files/libxml2-2.6.32.tar.gz
-
-[pil]
-recipe = zc.recipe.egg
-find-links = http://dist.repoze.org
-eggs = PIL==1.1.6
 
 [svnproducts]
 recipe = infrae.subversion
