--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -1,33 +1,30 @@
 [buildout]
+extends = zopeapp-versions.cfg
+          zope-versions.cfg
 
 [versions]
 # Buildout infrastructure
-zc.buildout = 1.5.2
-plone.recipe.alltests = 1.2
-plone.recipe.zope2instance = 4.1.5
-plone.recipe.zeoserver = 1.2.0
 buildout.dumppickedversions = 0.4
+zc.buildout = 1.5.2
+mr.developer = 1.17
+plone.recipe.alltests = 1.2
+plone.recipe.zope2instance = 4.1.8
+plone.recipe.zeoserver = 1.2.0
+distribute = 0.6.19
+setuptools = 0.6c11
+z3c.coverage = 1.2.0
 z3c.recipe.staticlxml = 0.7.2
 zc.recipe.cmmi = 1.3.4
 infrae.subversion = 1.4.5
-py = 1.3.4
-repoze.recipe.egg = 0.3
-z3c.coverage = 1.2.0
-collective.recipe.plonesite = 1.4.1
-collective.recipe.updateplone = 0.3
 
-## Overrides
-# Fixes some test failures introduced while fixing __unicode__ support
-#Acquisition = 2.13.7
-# 2.12.5 breaks our tests; We can remove this pin once GenericSetup 1.6.2 works.
-DateTime = 2.12.4
-# Get the latest version to include DateIndex._unindex optimization
-Products.ZCatalog = 2.13.7
-
+# Overrides
+Products.ZCatalog = 2.13.14
+Products.ZCTextIndex = 2.13.3
+zope.contenttype = 3.5.5
 
 # External dependencies
 Markdown = 2.0.3
-PIL = 1.1.6
+#PIL = 1.1.6
 Unidecode = 0.04.1
 elementtree = 1.2.7-20070827-preview
 FeedParser = 4.1
@@ -35,434 +32,177 @@ mailinglogger = 3.3.3
 python-dateutil = 1.5
 python-openid = 2.2.5
 simplejson = 2.1.3
-unittest2 = 0.5.1
-
-
-# ZopeApp
-zope.app.applicationcontrol = 3.5.8
-zope.app.appsetup = 3.14.0
-zope.app.authentication = 3.8.0
-zope.app.basicskin = 3.5.1
-zope.app.broken = 3.5.0
-zope.app.component = 3.9.2
-zope.app.container = 3.9.1
-zope.app.content = 3.5.0
-zope.app.debug = 3.4.1
-zope.app.dependable = 3.5.1
-zope.app.error = 3.5.3
-zope.app.exception = 3.6.2
-zope.app.folder = 3.5.1
-zope.app.form = 4.0.2
-zope.app.generations = 3.6.0
-zope.app.http = 3.9.0
-zope.app.i18n = 3.6.3
-zope.app.locales = 3.6.2
-zope.app.localpermission = 3.7.2
-zope.app.pagetemplate = 3.11.2
-zope.app.locking = 3.5.0
-zope.app.principalannotation = 3.7.0
-zope.app.publication = 3.12.0
-zope.app.publisher = 3.10.2
-zope.app.renderer = 3.5.1
-zope.app.rotterdam = 3.5.2
-zope.app.schema = 3.5.0
-zope.app.security = 3.7.5
-# zope.app.testing branch which is compatible with zope.testbrowser 3.8.
-zope.app.testing = 3.7.8
-zope.app.wsgi = 3.9.3
-zope.app.zcmlfiles = 3.7.0
-zope.app.zopeappgenerations = 3.5.0
-roman = 1.4.0
-wsgi-intercept = 0.4
-zc.sourcefactory = 0.7.0
-# Next major version of zope.testbrowser fails on py24.
-zope.testbrowser = 3.8.2
-
-# Deprecating
-zodbcode = 3.4.0
-#zope.app.apidoc = 3.7.5
-zope.app.cache = 3.7.0
-zope.app.catalog = 3.8.1
-#zope.app.dav = 3.5.3
-#zope.app.debugskin = 3.4.1
-#zope.app.file = 3.6.1
-#zope.app.ftp = 3.5.0
-#zope.app.interface = 3.5.2
-#zope.app.interpreter = 3.4.0
-zope.app.intid = 3.7.1
-zope.app.keyreference = 3.6.1
-#zope.app.onlinehelp = 3.5.2
-#zope.app.preference = 3.8.1
-#zope.app.preview = 3.4.0
-zope.app.securitypolicy = 3.6.1
-#zope.app.server = 3.5.0
-zope.app.session = 3.6.2
-#zope.app.skins = 3.4.0
-#zope.app.tree = 3.6.0
-#zope.app.twisted = 3.5.0
-#zope.app.undo = 3.5.0
-#zope.app.zptpage = 3.5.1
-#zope.file = 0.6.0
-#zope.html = 2.1.0
-#zope.modulealias = 3.4.0
-#zope.preference = 3.8.0
-#zope.thread = 3.4
-#zope.xmlpickle = 3.4.0
-#zope.rdb = 3.5.0
-zope.structuredtext = 3.5.0
-zope.sequencesort = 3.4.0
-
-
-# Zope2-specific
-Zope2 = 2.13.5
-AccessControl = 2.13.4
-Acquisition = 2.13.6
-#DateTime = 2.12.6
-DocumentTemplate = 2.13.1
-ExtensionClass = 2.13.2
-initgroups = 2.13.0
-Missing = 2.13.1
-MultiMapping = 2.13.0
-nt-svcutils = 2.13.0
-Persistence = 2.13.2
-Products.BTreeFolder2 = 2.13.1
-Products.ExternalMethod = 2.13.0
-Products.MailHost = 2.13.1
-Products.MIMETools = 2.13.0
-Products.OFSP = 2.13.2
-Products.PythonScripts = 2.13.0
-Products.StandardCacheManagers = 2.13.0
-Products.ZCatalog = 2.13.6
-Products.ZCTextIndex = 2.13.1
-Record = 2.13.0
-tempstorage = 2.12.1
-zExceptions = 2.13.0
-zLOG = 2.11.1
-ZopeUndo = 2.12.0
-
-# ZTK KGS overrides
-manuel = 1.1.1
-######mechanize = 0.2.3
-ZODB3 = 3.10.2
-zope.testing = 3.9.4
-
-# Zope2 dependencies
-repoze.retry = 1.0
-repoze.tm2 = 1.0a5
-#repoze.who = 2.0a3
-#zope.testbrowser = 3.10.3
-
-#Zope2=2.13.4
-
-
-# ZTK
-zope.annotation = 3.5.0
-zope.applicationcontrol = 3.5.5
-zope.authentication = 3.7.1
-zope.broken = 3.6.0
-zope.browser = 1.3
-zope.browsermenu = 3.9.1
-zope.browserpage = 3.12.2
-zope.browserresource = 3.10.3
-zope.cachedescriptors = 3.5.1
-zope.catalog = 3.8.1
-zope.component = 3.9.5
-zope.componentvocabulary = 1.0.1
-zope.configuration = 3.7.2
-zope.container = 3.11.2
-zope.contentprovider = 3.7.2
-zope.contenttype = 3.5.1
-zope.copy = 3.5.0
-zope.copypastemove = 3.6.0
-zope.datetime = 3.4.0
-zope.deferredimport = 3.5.3
-zope.deprecation = 3.4.0
-zope.dottedname = 3.4.6
-zope.dublincore = 3.7.0
-zope.error = 3.7.2
-zope.event = 3.5.0-1
-zope.exceptions = 3.6.1
-zope.filerepresentation = 3.6.0
-zope.formlib = 4.0.5
-zope.hookable = 3.4.1
-zope.i18n = 3.7.4
-zope.i18nmessageid = 3.5.3
-zope.index = 3.6.1
-zope.interface = 3.6.1
-zope.intid = 3.7.2
-zope.keyreference = 3.6.2
-zope.lifecycleevent = 3.6.2
-zope.location = 3.9.0
-zope.login = 1.0.0
-zope.mimetype = 1.3.1
-zope.minmax = 1.1.2
-zope.pagetemplate = 3.5.2
-zope.password = 3.6.1
-zope.pluggableauth = 1.0.3
-zope.principalannotation = 3.6.1
-zope.principalregistry = 3.7.1
-zope.processlifetime = 1.0
-zope.proxy = 3.6.1
-zope.ptresource = 3.9.0
-zope.publisher = 3.12.4
-zope.ramcache = 1.0
-zope.schema = 3.7.0
-zope.security = 3.7.4
-zope.securitypolicy = 3.7.0
-zope.sendmail = 3.7.4
-#zope.sequencesort = 3.4.0
-#zope.server = 3.6.2
-zope.session = 3.9.3
-zope.site = 3.9.2
-zope.size = 3.4.1
-#zope.structuredtext = 3.5.0
-zope.tal = 3.5.2
-zope.tales = 3.5.1
-#########zope.testing = 3.9.5
-zope.traversing = 3.13
-zope.viewlet = 3.7.2
-zope.documenttemplate = 3.4.2
-
-# Dependencies
-# Needed for the mechanize 0.1.x.
-ClientForm = 0.2.10
-distribute = 0.6.14
-docutils = 0.7
-#Jinja2 = 2.5.5
-# Newer versions of mechanize are not fully py24 compatible.
-##########mechanize = 0.1.11
-Paste = 1.7.5.1
-PasteDeploy = 1.3.4
-PasteScript = 1.7.3
-#py = 1.3.4
-Pygments = 1.3.1
-python-gettext = 1.0
-pytz = 2010l
-RestrictedPython = 3.6.0
-setuptools = 0.6c11
-#Sphinx = 1.0.5
-transaction = 1.1.1
-#z3c.recipe.sphinxdoc = 0.0.8
-zc.lockfile = 1.0.0
-ZConfig = 2.8.0
-zc.recipe.egg = 1.2.2
-#zc.recipe.testrunner = 1.2.1
-zc.resourcelibrary = 1.3.1
-zdaemon = 2.0.4
-##########ZODB3 = 3.9.7
-#zope.mkzeoinstance = 3.9.4
-
-# toolchain
-#argparse = 1.1
-lxml = 2.2.6
-#mr.developer = 1.16
-#tl.eggdeps = 0.4
-#z3c.checkversions = 0.4.1
-#z3c.recipe.compattest = 0.12.2
-#z3c.recipe.depgraph = 0.5
-#zope.kgs = 1.2.0
 
 # Plone release
-Plone = 4.1b1
-Products.ATContentTypes = 2.1.1
+Plone = 4.1
+Products.ATContentTypes = 2.1.3
 Products.ATReferenceBrowserWidget = 3.0
-Products.Archetypes = 1.7.3
-Products.CMFActionIcons = 2.1.3
+Products.Archetypes = 1.7.6
+Products.CMFActionIcons  = 2.1.3
 Products.CMFCalendar = 2.2.2
-Products.CMFCore = 2.2.3
-Products.CMFDefault  = 2.2.2
+Products.CMFCore = 2.2.4
+Products.CMFDefault = 2.2.2
 Products.CMFDiffTool = 2.0
-Products.CMFDynamicViewFTI = 4.0
-Products.CMFEditions = 2.1.1
-Products.CMFFormController = 3.0.1
-Products.CMFPlacefulWorkflow = 1.5.3
-Products.CMFPlone = 4.1b1
-Products.CMFQuickInstallerTool = 3.0.4
+Products.CMFDynamicViewFTI = 4.0.2
+Products.CMFEditions = 2.1.3
+Products.CMFFormController = 3.0.2
+Products.CMFPlacefulWorkflow = 1.5.5
+Products.CMFPlone = 4.1
+Products.CMFQuickInstallerTool = 3.0.5
 Products.CMFTestCase = 0.9.11
 Products.CMFTopic = 2.2.1
 Products.CMFUid = 2.2.1
-Products.contentmigration = 2.0.1
+Products.contentmigration = 2.0.3
 Products.DCWorkflow = 2.2.3
 Products.ExtendedPathIndex = 2.9
 Products.ExternalEditor = 1.0
-# 1.6.2 breaks things; see http://launchpad.net/bugs/643264
-Products.GenericSetup = 1.6.1
-Products.Marshall = 2.1
-Products.MimetypesRegistry = 2.0.1
-Products.PasswordResetTool = 2.0.5
+Products.GenericSetup = 1.6.3
+Products.Marshall = 2.1.1
+Products.MimetypesRegistry = 2.0.2
+Products.PasswordResetTool = 2.0.6
 Products.PlacelessTranslationService = 2.0.2
-Products.PloneLanguageTool = 3.0.8
-Products.PlonePAS = 4.0.6
+Products.PloneLanguageTool = 3.2.3
+Products.PlonePAS = 4.0.8
 Products.PloneTestCase = 0.9.13
-Products.PluggableAuthService = 1.7.3
+Products.PluggableAuthService = 1.7.5
 Products.PluginRegistry = 1.3b1
-Products.PortalTransforms = 2.0.5
-Products.ResourceRegistries = 2.0.3
+Products.PortalTransforms = 2.0.7
+Products.ResourceRegistries = 2.0.4
 Products.SecureMailHost = 1.1.2
-Products.TinyMCE = 1.2.3
+Products.TinyMCE = 1.2.7
 Products.ZopeVersionControl = 1.1.3
 Products.ZSQLMethods = 2.13.3
-#Products.i18ntestcase= 1.2
-Products.kupu = 1.5.0b1
+Products.i18ntestcase = 1.2
+Products.kupu = 1.5.0
 Products.statusmessages = 4.0
 Products.validation = 2.0
-archetypes.kss = 1.7.0
-archetypes.referencebrowserwidget = 2.2
-archetypes.schemaextender = 2.1
-borg.localrole = 3.0.2
+archetypes.kss = 1.7.1
+archetypes.referencebrowserwidget = 2.4.3
+archetypes.schemaextender = 2.1.1
+borg.localrole  = 3.0.2
 collective.monkeypatcher = 1.0.1
-#collective.testcaselayer = 1.3
+collective.testcaselayer  = 1.3
 collective.z3cform.datetimewidget = 1.0
-five.customerize = 1.0
+five.customerize = 1.0.1
 five.formlib = 1.0.4
 five.globalrequest = 1.0
 five.localsitemanager = 2.0.5
-kss.core = 1.6.1
-plone.app.blob = 1.4
-plone.app.caching = 1.0b2
-plone.app.content = 2.0.2
-plone.app.contentmenu = 2.0.2
-plone.app.contentrules = 2.1.0
-plone.app.controlpanel = 2.1b1
+kss.core = 1.6.2
+plone.app.blob  = 1.5
+plone.app.caching = 1.0
+plone.app.content = 2.0.7
+plone.app.contentmenu = 2.0.4
+plone.app.contentrules = 2.1.3
+plone.app.controlpanel = 2.1.1
 plone.app.customerize = 1.2.2
-plone.app.discussion  = 2.0a3
+plone.app.discussion = 2.0.7
 plone.app.folder = 1.0.4
-plone.app.form = 2.0.2
-plone.app.i18n = 2.0
-plone.app.imaging = 1.0.3
-plone.app.iterate = 2.1a2
-plone.app.jquerytools = 1.2b4
+plone.app.form = 2.0.3
+plone.app.i18n  = 2.0.1
+plone.app.imaging = 1.0.5
+plone.app.iterate = 2.1.2
+plone.app.jquerytools = 1.3
 plone.app.kss = 1.6.2
-plone.app.layout = 2.1.3
-plone.app.linkintegrity = 1.4.0
-plone.app.locales = 4.0.5
+plone.app.layout = 2.1.8
+plone.app.linkintegrity = 1.4.2
+plone.app.locales = 4.0.8
 plone.app.openid = 2.0.1
-plone.app.portlets = 2.1.2
-plone.app.redirector = 1.1.1
-plone.app.registry = 1.0b5
-plone.app.testing = 4.0a5
-plone.app.upgrade = 1.1b1
-plone.app.users = 1.1b2
-plone.app.uuid = 1.0b2
+plone.app.portlets = 2.1.5
+plone.app.redirector = 1.1.2
+plone.app.registry = 1.0
+plone.app.testing = 4.0.1
+plone.app.upgrade = 1.1
+plone.app.users = 1.1.1
+plone.app.uuid = 1.0
 plone.app.viewletmanager = 2.0.2
-plone.app.vocabularies = 2.1.1
-plone.app.workflow = 2.0.1
-plone.app.z3cform = 0.5.3
-plone.autoform = 1.0b5
-plone.browserlayer = 2.0.1
-plone.cachepurging = 1.0b1
-plone.caching  = 1.0b2
-plone.contentrules = 2.0
-plone.fieldsets = 2.0
+plone.app.vocabularies = 2.1.3
+plone.app.workflow = 2.0.4
+plone.app.z3cform = 0.5.6
+plone.autoform = 1.0
+plone.browserlayer = 2.1
+plone.cachepurging = 1.0.1
+plone.caching = 1.0
+plone.contentrules = 2.0.1
+plone.fieldsets = 2.0.1
 plone.folder = 1.0.1
 plone.i18n = 2.0
 plone.indexer = 1.0
 plone.intelligenttext = 2.0.1
 plone.keyring = 2.0
-plone.locking = 2.0
-plone.memoize = 1.1
+plone.locking = 2.0.1
+plone.memoize = 1.1.1
 plone.openid = 2.0
-plone.outputfilters = 1.0b3
-plone.portlet.collection = 2.0.1
+plone.outputfilters = 1.0
+plone.portlet.collection = 2.0.3
 plone.portlet.static = 2.0.1
-plone.portlets = 2.0.1
+plone.portlets = 2.0.2
 plone.protect = 2.0
-plone.registry = 1.0b4
-plone.reload = 1.5
-plone.scale = 1.2
-plone.session = 3.4
-plone.stringinterp = 1.0.3
-plone.supermodel = 1.0b7
-plone.testing = 4.0a5
-plone.theme = 2.0
-plone.transformchain = 1.0b1
-plone.uuid = 1.0b2
-plone.z3cform = 0.7.3
-plonetheme.classic = 1.1
-plonetheme.sunburst = 1.1.2
+plone.registry = 1.0
+plone.reload = 2.0
+plone.scale = 1.2.2
+plone.session = 3.5
+plone.stringinterp = 1.0.4
+plone.supermodel = 1.0.3
+plone.testing = 4.0.1
+plone.theme  = 2.1
+plone.transformchain = 1.0
+plone.uuid  = 1.0.1
+plone.z3cform = 0.7.7
+plonetheme.classic = 1.1.1
+plonetheme.sunburst = 1.1.5
 wicked = 1.1.9
-z3c.autoinclude = 0.3.3
-z3c.batching = 1.1.0
+z3c.autoinclude = 0.3.4
+z3c.batching  = 1.1.0
 z3c.caching = 2.0a1
-z3c.form = 2.4.1
-z3c.formwidget.query = 0.5
-z3c.zcmlhook = 1.0b1
+z3c.form = 2.4.3
+z3c.formwidget.query  = 0.5
+z3c.zcmlhook  = 1.0b1
 zope.globalrequest = 1.0
 
-# 2.12.5 breaks our tests; We can remove this pin once GenericSetup 1.6.2 works.
-#DateTime                              = 2.12.4
-
-Products.PloneHotfix20110720 = 1.1
-
-
-# additional zope packages
-Products.ZSQLMethods = 2.13.3
-ore.yui = 0.5.3
-zope.app.publication = 3.8.0
-zope.thread = 3.4
-repoze.cssutils = 1.0a6
-lxml = 2.2.6
-#zope.app.testing = 3.6.2
-#zope.app.container = 3.8.0
-WSGIFilter = 0.2
-nose = 0.11.1
-#FormEncode = 1.2.2
-#zope.app.i18n = 3.5.0
-zope.app.wsgi = 3.5.2
-#zope.app.form = 3.7.3
-#zope.app.dependable = 3.4.0
-#zope.app.debug = 3.4.1
-#zope.app.security = 3.7.4
-#zope.testbrowser = 3.8.1
-#zope.app.zcmlfiles = 3.5.4
-#zope.app.appsetup = 3.11.0
-#zope.app.exception = 3.4.0
-#zope.app.http = 3.5.1
-SQLAlchemy = 0.5.8
-psycopg2 = 2.0.10
-mechanize = 0.1.8
-repoze.who = 1.0.10
-
-
-#add on eggs
+#Add on eggs for bungeni
 Products.whoopass = 0.2
-alchemist.traversal = 0.4.0
-alchemist.ui = 0.4.2
+SQLAlchemy = 0.6.8
+zc.table = 0.8.1
+zope.sqlalchemy = 0.6.1
+zdhtmlxscheduler = 0.9.0
+imsvdex = 1.0
 zc.displayname = 1.1
 z3c.menu.ready2go = 0.8.0
+ore.yui = 0.5.3
 plone.transforms = 1.0a3
 z3c.dav = 1.0b2
-ore.workflow = 1.0.5
 ore.xapian = 0.5.0
 chameleon.html = 1.0b4
-Deliverance = 0.3.1
-pyquery = 0.6.1
+Deliverance = 0.5.0
+pyquery = 1.0
 ore.wsgiapp = 0.3.2
-z3c.traverser = 0.3.0
-zc.table = 0.8.1
+zope.sqlalchemy = 0.6.1
+elementtreewriter = 1.1
 z3c.template = 1.2.1
 z3c.conditionalviews = 1.0
 z3c.etree = 0.9.2
 xappy = 0.5
+repoze.cssutils = 1.0a6
 chameleon.core = 1.0.4
 chardet = 1.0.1
+WSGIFilter = 0.2
 DevAuth = 0.1.2
 WebError = 0.10.3
-Tempita = 0.5dev
+Tempita = 0.5.1
 WSGIProxy = 0.2.2
-WebOb = 1.0.1
+WebOb  = 1.1b2
 z3c.ptcompat = 0.5.7
+nose = 1.1.2
 Chameleon = 1.2.13
 HTTPEncode = 0.1
-httplib2 = 0.6.0
+httplib2 = 0.7.1
+psycopg2 = 2.4.2
+
+#Additional Plone Products
 Products.LinguaPlone = 4.0.2
 Products.Scrawl = 2.0b1
 collective.contacts = 1.4.5
 Products.ATExtensions = 1.1a3
-zdhtmlxscheduler = 0.9.0
-imsvdex = 1.0
-elementtreewriter = 1.1
-isotoma.recipe.plonetools = 0.0.7
 collective.tabr = 1.2
 Products.ATVocabularyManager = 1.6.1
 collective.dynatree = 1.3.4
@@ -471,7 +211,7 @@ z3c.json = 0.5.4
 collective.js.jqueryui = 1.8.13.1
 anz.dashboard = 0.62
 python-cjson = 1.0.5
-zope.sqlalchemy = 0.6.1
+collective.portlet.feedmixer = 1.5
 Products.Collage = 1.3.6
 collective.collage.plonetruegallery = 1.0b1
 collective.plonetruegallery =  1.2.1
