Added repoze.profile to the buildout and to debug.ini(and not deploy.ini). To view cProfile stats go to http://localhost/__profile__. Have a look at Python docs of profile and cprofile on how to interpret results.

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -52,7 +52,8 @@ eggs =
       qpy
       pytidylib
       python-dateutil
-      
+      repoze.profile
+
 parts = 
       lxml
       ${buildout:platform_parts}
