--- a/bungeni.buildout/trunk/debug.ini
+++ b/bungeni.buildout/trunk/debug.ini
@@ -9,6 +9,13 @@ config_file = %(here)s/who.ini
 log_file = stdout
 log_level = warning
 
+[filter:profile]
+use = egg:repoze.profile#profile
+log_filename = bungeni_profile.txt
+discard_first_request = false
+path = /__profile__
+flush_at_shutdown = true
+
 [app:zope]
 use = egg:bungeni
 zcml = src/bungeni.main/bungeni/site.zcml
@@ -26,7 +33,8 @@ use = egg:Paste#urlmap
 /cache = cache
 
 [pipeline:root]
-pipeline = egg:repoze.debug#pdbpm
+pipeline = profile
+           egg:repoze.debug#pdbpm
            egg:z3c.evalexception#pdb
            egg:Paste#httpexceptions
            who
