Fixing link to postgresql source in platform.cfg

--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -24,7 +24,7 @@ platform_parts =
 
 [postgresql]
 recipe = zc.recipe.cmmi
-url = ftp://ftp.cs.tu-berlin.de/pub/misc/postgresql/v8.3.4/postgresql-8.3.4.tar.bz2
+url = http://dist.bungeni.org/cache/postgresql/postgresql-8.3.4.tar.bz2
 
 [psycopg2]
 recipe = zc.recipe.egg:custom
