Switching from SafeConfigParser to ConfigObj ; updated release.ini to support upgrade sub-sections ; the upgrade section will be used to refer to upgrade scripts from specific releases

--- a/fabric/branches/patch-support-oct-2011/release.ini
+++ b/fabric/branches/patch-support-oct-2011/release.ini
@@ -4,10 +4,17 @@
 # * The latest, active release must be the one at the top of the file
 # * The releases descend chronologically
 
-[2011-11-13]
+[2011-10-13]
 bungeni=8666
 portal=8666
 plone=8666
+
+[[upgrade_1]]
+from=2011-08-31
+run='''
+    test.sh
+    test2.sh
+    '''
 
 [2011-08-31]
 bungeni=8553
