Changing registry number setter for motion to generated instead of manual

--- a/bungeni_custom/trunk/registry/config.ini
+++ b/bungeni_custom/trunk/registry/config.ini
@@ -1,6 +1,6 @@
 [types]
 question = {registry_number}:{progressive_number}-{type}
-motion = manual
+motion = {registry_number}:{progressive_number}-{type}
 tableddocument = {registry_number}:{progressive_number}-{type}
 bill = {registry_number}:{progressive_number}-{type}
 agendaitem = {registry_number}:{progressive_number}-{type}
