--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -213,3 +213,10 @@ z3c.recipe.mkdir = 0.3.1
 imsvdex = 1.0
 elementtreewriter = 1.1
 zope.sqlalchemy = 0.6.1
+# 25-11-2011
+chardet = 1.0.1
+DevAuth = 0.1.2
+Pygments = 1.3.1
+Tempita = 0.5.1
+WebError = 0.10.3
+WSGIProxy = 0.2.2
