--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -16,12 +16,12 @@ jsonlib = 1.3.10
 markdown = 1.7
 martian = 0.11
 meld3 = 0.6.5
-nose = 0.10.4
-Paste = 1.7.2
-PasteDeploy = 1.3.2
-PasteScript = 1.7.3
+nose =  0.11.1
+Paste = 1.7.5.1
+PasteDeploy = 1.5.0
+PasteScript = 1.7.5
 plone.transforms = 1.0a2
-pytz = 2009a
+pytz = 2009g
 repoze.bfg = 0.6.7
 repoze.squeeze = 0.4.4
 repoze.bfg.htmlpage = 0.3.2
@@ -32,7 +32,7 @@ repoze.cssutils = 1.0a6
 repoze.debug = 0.6
 repoze.formapi = 0.3.1
 repoze.profile = 0.6
-repoze.recipe.egg = 0.1
+repoze.recipe.egg = 0.3
 repoze.tm2 = 1.0a4
 repoze.who = 1.0.10
 repoze.zcml = 0.2
@@ -42,7 +42,7 @@ setuptools = 0.6c11
 sourcecodegen = 0.6.11
 transaction = 1.0a1
 virtualenv = 1.3.2
-WebOb = 0.9.5
+WebOb = 0.9.6.1
 WSGIUtils = 0.7
 xappy = 0.5
 # 27/10/2010 - updating to 0.7.2 for 64 bit build compliance
@@ -52,54 +52,55 @@ zc.lockfile = 1.0.0
 zc.recipe.cmmi = 1.3.4
 zc.recipe.egg = 1.2.2
 zc.recipe.testrunner = 1.2.0
-zc.table = 0.6
+zc.table = 0.7.0
 zc.resourcelibrary = 1.1.0
 ZConfig = 2.6.1
-zdaemon = 2.0.2
-ZODB3 = 3.8.1
-zope.annotation = 3.4.1
-zope.app.http = 3.5.1
+zdaemon = 2.0.4
+ZODB3 = 3.9.0b1
+zope.annotation = 3.4.2
+zope.app.http = 3.5.2
 zope.app.i18n = 3.6.0
-zope.app.locales = 3.4.5
-zope.app.zcmlfiles = 3.5.3
-zope.app.publication = 3.5.3
+zope.app.locales = 3.5.1
+zope.app.zcmlfiles = 3.5.4
+zope.app.publication = 3.6.0
 zope.app.publisher = 3.6.2
 zope.app.pagetemplate = 3.6.0
-zope.app.component = 3.6.1
+zope.app.component = 3.7.0
 zope.app.container = 3.7.2
 zope.app.form = 3.7.3
 zope.app.folder = 3.5.1
 zope.app.security = 3.7.0
-zope.component = 3.6.0
-zope.configuration = 3.5.0
-zope.container = 3.7.2
-zope.deferredimport = 3.4.0
+zope.component = 3.7.0
+zope.configuration = 3.6.0
+#NOTE
+zope.container = 3.8.2
+zope.deferredimport = 3.5.0
 zope.deprecation = 3.4.0
 zope.dottedname = 3.4.5
-zope.dublincore = 3.4.1
-zope.event = 3.4.0
+zope.dublincore = 3.4.2
+zope.event = 3.4.1
 zope.exceptions = 3.5.2
-zope.hookable = 3.4.0
+zope.hookable = 3.4.1
 zope.i18n = 3.7.0
 zope.i18nmessageid = 3.4.3
-zope.interface = 3.5.0
+zope.interface = 3.5.1
 zope.intid = 3.7.1
 zope.lifecycleevent = 3.5.2
-zope.location = 3.5.4
+zope.location = 3.7.0
 zope.proxy = 3.5.0
-zope.publisher = 3.6.3
-zope.schema = 3.5.1
-zope.security = 3.6.2
-zope.testing = 3.7.1
+zope.publisher = 3.8.0
+zope.schema = 3.5.4
+zope.security = 3.7.0
+zope.testing = 3.8.1
 plone.memoize = 1.0.4
 ore.alchemist = 0.6.0
 ore.library = 0.5.1dev
 ore.transforms = 0.2.0
 ore.yui = 0.5.3
 ore.yuiwidget = 0.3.1
-zope.securitypolicy = 3.5.0
+zope.securitypolicy = 3.6.0
 hexagonit.recipe.download = 1.2.2
-zope.traversing = 3.7.2
+zope.traversing = 3.8.0
 zope.app.apidoc = 3.6.5
 SQLAlchemy = 0.6.8
 pytidylib = 0.2.1
@@ -121,7 +122,7 @@ ore.xapian = 0.5.0
 PdbTextMateSupport = 0.3
 plone.i18n = 1.1a1
 plone.recipe.command = 1.0
-pyquery = 0.3.1
+pyquery = 0.4
 python-dateutil = 1.5
 python-gettext = 1.0
 python-memcached = 1.44
@@ -140,39 +141,39 @@ z3c.template = 1.2.0
 zc.configuration = 1.1
 zc.displayname = 1.0
 zodbcode = 3.4.0
-zope.app.applicationcontrol = 3.4-dev-r73715
-zope.app.appsetup = 3.10.1
+zope.app.applicationcontrol = 3.4.3
+zope.app.appsetup = 3.11
 zope.app.authentication = 3.6.0
 zope.app.basicskin = 3.4.0
 zope.app.broken = 3.5.0
 zope.app.cache = 3.5.0
 zope.app.catalog = 3.8.0
-zope.app.content = 3.4.0a1
+zope.app.content = 3.4.0
 zope.app.debug = 3.4.1
 zope.app.dependable = 3.4.0
 #deprecated zope.app.error switching to zope.error
 #update: 27/10/2010 - used by other packages in zope -- so adding the peg back in
-zope.app.error = 3.4.1
-zope.app.exception = 3.4.0a1
+zope.app.error = 3.5.2
+zope.app.exception = 3.5.0
 zope.app.file = 3.5.0
-zope.app.generations = 3.4.0a1
+zope.app.generations = 3.5.0
 zope.app.interface = 3.5.0
 zope.app.intid = 3.7.0
 zope.app.keyreference = 3.6.0
 zope.app.localpermission = 3.7.0
 zope.app.onlinehelp = 3.5.1
 zope.app.preference = 3.6.0
-zope.app.principalannotation = 3.4.0a1
+zope.app.principalannotation = 3.6.1
 zope.app.renderer = 3.5.0
 zope.app.rotterdam = 3.5.0
-zope.app.schema = 3.4.0a1
+zope.app.schema = 3.5.0
 zope.app.securitypolicy = 3.5.1
 zope.app.session = 3.6.0
-zope.app.testing = 3.6.1
+zope.app.testing = 3.6.2
 zope.app.tree = 3.6.0
 zope.app.wsgi = 3.5.2
 zope.app.zapi = 3.4.0
-zope.app.zopeappgenerations = 3.4.0a1
+zope.app.zopeappgenerations = 3.5.0
 zope.authentication = 3.7.0
 zope.broken = 3.5.0
 zope.browser = 1.2
