--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -11,7 +11,7 @@ five.pt = 0.7
 cmf.pt = 0.3
 lxml = 2.2.6
 psycopg2 = 2.4.2
-elementtree = 1.2.6-20050316
+elementtree = 1.2.6-20050316 
 jsonlib = 1.3.10
 markdown = 1.7
 martian = 0.11
@@ -52,7 +52,7 @@ zc.lockfile = 1.0.0
 zc.recipe.cmmi = 1.3.4
 zc.recipe.egg = 1.2.2
 zc.recipe.testrunner = 1.2.0
-zc.table = 0.7.0
+zc.table = 0.8.1
 zc.resourcelibrary = 1.1.0
 ZConfig = 2.6.1
 zdaemon = 2.0.4
@@ -87,7 +87,9 @@ zope.interface = 3.5.1
 zope.intid = 3.7.1
 zope.lifecycleevent = 3.5.2
 zope.location = 3.7.0
+# upgrade candidate
 zope.proxy = 3.5.0
+# upgrade candidate
 zope.publisher = 3.8.0
 zope.schema = 3.5.4
 zope.security = 3.7.0
@@ -181,6 +183,7 @@ zope.cachedescriptors = 3.5.0
 zope.catalog = 3.8.0
 zope.componentvocabulary = 1.0
 zope.contentprovider = 3.5.0
+## upgrade candidate
 zope.contenttype = 3.4.1
 zope.copy = 3.5.0
 zope.copypastemove = 3.5.1
@@ -192,16 +195,17 @@ zope.formlib = 3.6.0
 zope.index = 3.5.1
 zope.keyreference = 3.6.1
 zope.minmax = 1.1.0
-zope.pagetemplate = 3.5.0
+zope.pagetemplate = 3.6.3
 zope.password = 3.5.1
 zope.principalregistry = 3.7.0
 zope.sendmail = 3.6.0
 zope.session = 3.9.1
 zope.site = 3.6.1
 zope.size = 3.4.1
-zope.structuredtext = 3.5.0dev-plone.2
-zope.tal = 3.5.1
-zope.tales = 3.4.0
+zope.structuredtext = 3.5.1
+zope.tal = 3.6.0
+#zope.tal = 3.5.1
+zope.tales = 3.5.1
 zope.testbrowser = 3.5.0
 zope.viewlet = 3.5.0
 4Suite-XML = 1.0.2
