Adding version peg for plone.principalsource. Fixes broken plone build.
Broken after dependency added to apkn.repository:
See: http://code.google.com/p/apkn/source/detail?r=506

--- a/plone.buildout/trunk/versions.cfg
+++ b/plone.buildout/trunk/versions.cfg
@@ -216,3 +216,4 @@ collective.collage.plonetruegallery = 1.0b1
 collective.plonetruegallery =  1.2.1
 collective.collage.portlets = 0.3.1
 collective.portlet.feedmixer = 1.5
+plone.principalsource = 1.0b1
