Updated all packages and applications to their latest, stable versions. Buildout needs to be rerun on all installations

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -68,9 +68,10 @@ find-links =
      http://dist.repoze.org/lemonade/dev/simple
      http://pypi.python.org/pypi/
      http://pypi.python.org/pypi/SQLAlchemy/0.6.8
+     http://dist.bungeni.org/bungeni/qpy
      
-index = http://dist.bungeni.org:6543/bungeni
-
+index = http://pypi.python.org/simple
+    
 versions = versions
 
 
