--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -24,7 +24,7 @@ platform_parts =
 
 [postgresql]
 recipe = zc.recipe.cmmi
-url = http://dist.bungeni.org/cache/postgresql/postgresql-8.3.4.tar.bz2
+url = /home/undesa/cache/postgresql-8.3.17.tar.bz2
 
 [psycopg2]
 recipe = zc.recipe.egg:custom
@@ -61,14 +61,15 @@ template_dir = data/scripts
 
 [xapian]
 recipe = zc.recipe.cmmi
-url = http://xappy.googlecode.com/files/xapian-core-14157.tgz
-
+url = http://oligarchy.co.uk/xapian/1.2.8/xapian-core-1.2.8.tar.gz 
+    
+    
 [xapian-bindings]
 recipe = zc.recipe.cmmi
-url = http://xappy.googlecode.com/files/xapian-bindings-14157.tgz
+url = http://oligarchy.co.uk/xapian/1.2.8/xapian-bindings-1.2.8.tar.gz
 extra_options = 
     PYTHON_LIB=${xapian:location}/lib/python
-    XAPIAN_CONFIG=${xapian:location}/bin/xapian-config-1.1
+    XAPIAN_CONFIG=${xapian:location}/bin/xapian-config
     --with-python 
     --with-php=no 
     --with-ruby=no 
@@ -239,10 +240,3 @@ path = ${buildout:bin-directory}/admin-passwd
 content =
  #!/bin/sh
   ${buildout:bin-directory}/python ${buildout:directory}/data/scripts/admin-password.py
-
-
-
-
-
-
-
