--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -1,227 +1,176 @@
-# Dependency versions. Versions should NOT be incremented unless
-# new egg has been evaluated, code has been adjusted if necessary
-# for new egg, and tests pass for the code.
-
 [versions]
-chameleon.core = 1.0.1
-chameleon.zpt = 1.0.0
-chameleon.html = 1.0b4
-z3c.pt = 1.0.0
-five.pt = 0.7
-cmf.pt = 0.3
-lxml = 2.2.6
-psycopg2 = 2.4.2
-elementtree = 1.2.6-20050316 
-jsonlib = 1.3.10
-markdown = 1.7
-martian = 0.11
-meld3 = 0.6.5
-nose =  0.11.1
-Paste = 1.7.5.1
-PasteDeploy = 1.5.0
-PasteScript = 1.7.5
-plone.transforms = 1.0a2
-pytz = 2009g
-repoze.bfg = 0.6.7
-repoze.squeeze = 0.4.4
-repoze.bfg.htmlpage = 0.3.2
-repoze.bfg.httprequest = 0.4
-repoze.bfg.skins = 0.12
-repoze.bfg.static = 0.6
-repoze.cssutils = 1.0a6
-repoze.debug = 0.6
-repoze.formapi = 0.3.1
-repoze.profile = 0.6
-repoze.recipe.egg = 0.3
-repoze.tm2 = 1.0a4
-repoze.who = 1.0.10
-repoze.zcml = 0.2
-repoze.zodbconn = 0.6
-Routes = 1.10.2
-setuptools = 0.6c11
-sourcecodegen = 0.6.11
-transaction = 1.0a1
-virtualenv = 1.3.2
-WebOb = 0.9.6.1
-WSGIUtils = 0.7
-xappy = 0.5
-# 27/10/2010 - updating to 0.7.2 for 64 bit build compliance
-z3c.recipe.staticlxml = 0.7.2
-zc.buildout = 1.5.2
-zc.lockfile = 1.0.0
-zc.recipe.cmmi = 1.3.4
-zc.recipe.egg = 1.3.2
-zc.recipe.testrunner = 1.2.0
-zc.table = 0.8.1
-zc.resourcelibrary = 1.1.0
-ZConfig = 2.6.1
-zdaemon = 2.0.4
-ZODB3 = 3.9.0b1
-zope.annotation = 3.4.2
-zope.app.http = 3.5.2
-zope.app.i18n = 3.6.0
-zope.app.locales = 3.5.1
-zope.app.zcmlfiles = 3.5.4
-zope.app.publication = 3.6.0
-zope.app.publisher = 3.6.2
-zope.app.pagetemplate = 3.6.0
-zope.app.component = 3.7.0
-zope.app.container = 3.7.2
-zope.app.form = 3.7.3
-zope.app.folder = 3.5.1
-zope.app.security = 3.7.0
-zope.component = 3.7.0
-zope.configuration = 3.6.0
-#NOTE
-zope.container = 3.8.2
-zope.deferredimport = 3.5.0
-zope.deprecation = 3.4.0
-zope.dottedname = 3.4.5
-zope.dublincore = 3.4.2
-zope.event = 3.4.1
-zope.exceptions = 3.5.2
-zope.hookable = 3.4.1
-zope.i18n = 3.7.0
-zope.i18nmessageid = 3.4.3
-zope.interface = 3.5.1
-zope.intid = 3.7.1
-zope.lifecycleevent = 3.5.2
-zope.location = 3.7.0
-# upgrade candidate
-zope.proxy = 3.5.0
-# upgrade candidate
-zope.publisher = 3.8.0
-zope.schema = 3.5.4
-zope.security = 3.7.0
-zope.testing = 3.8.1
-plone.memoize = 1.0.4
-ore.alchemist = 0.6.0
-ore.library = 0.5.1dev
-ore.transforms = 0.2.0
-ore.yui = 0.5.3
-ore.yuiwidget = 0.3.1
-zope.securitypolicy = 3.6.0
-hexagonit.recipe.download = 1.2.2
-zope.traversing = 3.8.0
-zope.app.apidoc = 3.6.5
-SQLAlchemy = 0.6.8
-pytidylib = 0.2.1
-# 27/10/2010 - not sure if this should be _script or -script ..adding both just to be sure
-buildout-script = 0.2a1
 buildout_script = 0.2a1
+chardet = 1.0.1
 ClientForm = 0.2.10
 Deliverance = 0.5.0
-docutils = 0.5
-FormEncode = 1.2.2
+DevAuth = 0.1.2
+docutils = 0.8.1
+elementtree = 1.2.6-20050316 
+elementtreewriter = 1.1
+evoque = 0.4
 HTTPEncode = 0.1
-httplib2 = 0.4.0
-ipython = 0.9.1
+httplib2 = 0.7.2
+imsvdex = 1.0
+ipython = 0.12
+iw.recipe.cmd = 0.3
 lovely.recipe =  1.0.0
-mechanize = 0.1.11
-ore.recipe.fs = 0.3.1
+lxml = 2.3.3
+mechanize = 0.2.5
+meld3 = 0.6.8
 ore.wsgiapp = 0.3.2
 ore.xapian = 0.5.0
+ore.yui = 0.5.3
+ore.yuiwidget = 0.3.1
+PasteDeploy = 1.5.0
+PasteScript = 1.7.5
 PdbTextMateSupport = 0.3
 plone.i18n = 1.1a1
+plone.memoize = 1.0.4
 plone.recipe.command = 1.0
-pyquery = 0.4
+plone.transforms = 1.1a1
+psycopg2 = 2.4.2
+Pygments = 1.4
+pyquery = 1.1.1
 python-dateutil = 1.5
 python-gettext = 1.0
-python-memcached = 1.44
+python-memcached = 1.48
+pytidylib = 0.2.1
+pytz = 2011n
+qpy = 1.8
+repoze.debug = 0.7.2
+repoze.profile = 1.3
+repoze.squeeze = 0.4.4
+repoze.who = 2.0
 RestrictedPython = 3.5.1
+setuptools = 0.6c11
 simplejson = 2.0.9
+SQLAlchemy = 0.6.8
+Tempita = 0.5.1
 tl.eggdeps = 0.3.2
+transaction = 1.2.0
+WebError = 0.10.3
+WebOb = 1.1.1
 WSGIFilter = 0.2
+WSGIProxy = 0.2.2
+xappy = 0.5
 z3c.conditionalviews = 1.0
 z3c.dav = 1.0b2
 z3c.etree = 0.9.2
 z3c.evalexception = 2.0
-z3c.i18n = 0.1.1
-z3c.menu.ready2go = 0.6.0
-z3c.ptcompat = 0.5.2
-z3c.template = 1.2.0
+z3c.i18n = 0.1.2
+z3c.menu.ready2go = 0.8.0
+z3c.recipe.mkdir = 0.3.1
+z3c.recipe.staticlxml = 0.8
+z3c.template = 1.4.0
+zc.buildout = 1.5.2
 zc.configuration = 1.1
 zc.displayname = 1.0
+zc.lockfile = 1.0.0
+ZConfig = 2.9.0
+zc.recipe.cmmi = 1.3.5
+zc.recipe.egg = 1.3.2
+zc.recipe.testrunner = 1.4.0
+zc.resourcelibrary = 1.3.2
+zc.table = 0.8.1
+zdaemon = 2.0.4
+zdhtmlxscheduler = 1.0.0
+ZODB3 = 3.10.5
 zodbcode = 3.4.0
-zope.app.applicationcontrol = 3.4.3
-zope.app.appsetup = 3.11
-zope.app.authentication = 3.6.0
-zope.app.basicskin = 3.4.0
-zope.app.broken = 3.5.0
-zope.app.cache = 3.5.0
-zope.app.catalog = 3.8.0
-zope.app.content = 3.4.0
+zope.annotation = 3.5
+zope.app.apidoc = 3.6.5
+zope.app.applicationcontrol = 3.5.10
+zope.app.appsetup = 3.16.0
+zope.app.authentication = 3.9.0
+zope.app.basicskin = 3.5.1
+zope.app.broken = 3.6.0
+zope.app.cache = 3.7.0
+zope.app.catalog = 3.8.1
+zope.app.component = 3.9.3
+zope.app.container = 3.9.1
+zope.app.content = 3.5.1
 zope.app.debug = 3.4.1
-zope.app.dependable = 3.4.0
-#deprecated zope.app.error switching to zope.error
-#update: 27/10/2010 - used by other packages in zope -- so adding the peg back in
-zope.app.error = 3.5.2
-zope.app.exception = 3.5.0
-zope.app.file = 3.5.0
-zope.app.generations = 3.5.0
-zope.app.interface = 3.5.0
-zope.app.intid = 3.7.0
-zope.app.keyreference = 3.6.0
-zope.app.localpermission = 3.7.0
-zope.app.onlinehelp = 3.5.1
-zope.app.preference = 3.6.0
-zope.app.principalannotation = 3.6.1
-zope.app.renderer = 3.5.0
-zope.app.rotterdam = 3.5.0
+zope.app.dependable = 3.5.1
+zope.app.error = 3.5.3
+zope.app.exception = 3.6.3
+zope.app.file = 3.6.1
+zope.app.folder = 3.5.2
+zope.app.generations = 3.7.0
+zope.app.http = 3.10.2
+zope.app.i18n = 3.6.3
+zope.app.interface = 3.6.0
+zope.app.intid = 3.7.1
+zope.app.keyreference = 3.6.1
+zope.app.locales = 3.7.3
+zope.app.localpermission = 3.7.2
+zope.app.onlinehelp = 3.5.2
+zope.app.pagetemplate = 3.11.2
+zope.app.preference = 3.8.1
+zope.app.principalannotation = 3.7.0
+zope.app.publication = 3.13.2
+zope.app.publisher = 3.10.2
+zope.app.renderer = 3.5.1
+zope.app.rotterdam = 3.5.2
 zope.app.schema = 3.5.0
-zope.app.securitypolicy = 3.5.1
-zope.app.session = 3.6.0
-zope.app.testing = 3.6.2
+zope.app.security = 3.7.5
+zope.app.securitypolicy = 3.6.1
+zope.app.session = 3.6.2
+zope.app.testing = 3.10.0
 zope.app.tree = 3.6.0
-zope.app.wsgi = 3.5.2
-zope.app.zapi = 3.4.0
-zope.app.zopeappgenerations = 3.5.0
-zope.authentication = 3.7.0
-zope.broken = 3.5.0
-zope.browser = 1.2
-zope.cachedescriptors = 3.5.0
-zope.catalog = 3.8.0
-zope.componentvocabulary = 1.0
-zope.contentprovider = 3.5.0
-## upgrade candidate
-zope.contenttype = 3.4.1
+zope.app.wsgi = 3.14.0
+zope.app.zapi = 3.5.0
+zope.app.zcmlfiles = 3.7.1
+zope.app.zopeappgenerations = 3.6.1
+zope.authentication = 3.7.1
+zope.browser = 1.3
+zope.browsermenu = 3.9.1
+zope.cachedescriptors = 3.5.1
+zope.catalog = 3.8.2
+zope.component = 3.12.0
+zope.componentvocabulary = 1.0.1
+zope.configuration = 3.8.0
+zope.container = 3.12.0
+zope.contentprovider = 3.7.2
+zope.contenttype = 3.5.5
 zope.copy = 3.5.0
-zope.copypastemove = 3.5.1
-zope.datetime = 3.4.0
-zope.documenttemplate = 3.4.2
-zope.error = 3.6.0
-zope.filerepresentation = 3.5.0
-zope.formlib = 3.6.0
-zope.index = 3.5.1
-zope.keyreference = 3.6.1
-zope.minmax = 1.1.0
+zope.copypastemove = 3.8.0
+zope.datetime = 3.4.1
+zope.deferredimport = 3.5.3
+zope.deprecation = 3.5.0
+zope.documenttemplate = 3.4.3
+zope.dottedname = 3.4.6
+zope.dublincore = 3.8.2
+zope.error = 3.7.3
+zope.event = 3.5.1
+zope.exceptions = 3.6.1
+zope.filerepresentation = 3.6.1
+zope.formlib = 4.0.6
+zope.hookable = 3.4.1
+zope.i18n = 3.7.4
+zope.i18nmessageid = 3.6.1
+zope.index = 3.6.3
+zope.interface = 3.8.0
+zope.intid = 3.7.2
+zope.keyreference = 3.6.4
+zope.lifecycleevent = 3.7.0
+zope.location = 3.9.1
+zope.minmax = 1.1.2
 zope.pagetemplate = 3.6.3
-zope.password = 3.5.1
-zope.principalregistry = 3.7.0
-zope.sendmail = 3.6.0
-zope.session = 3.9.1
-zope.site = 3.6.1
-zope.size = 3.4.1
+zope.password = 3.6.1
+zope.principalregistry = 3.7.1
+zope.proxy = 3.6.1
+zope.publisher = 3.13.0
+zope.schema = 4.0.1
+zope.security = 3.8.3
+zope.securitypolicy = 3.7.0
+zope.sendmail = 3.7.4
+zope.session = 3.9.5
+zope.site = 3.9.2
+zope.size = 3.5.0
+zope.sqlalchemy = 0.7
 zope.structuredtext = 3.5.1
 zope.tal = 3.6.0
-#zope.tal = 3.5.1
 zope.tales = 3.5.1
-zope.testbrowser = 3.5.0
-zope.viewlet = 3.5.0
-4Suite-XML = 1.0.2
-evoque = 0.4
-qpy = 1.8
-##used by the buildout i18n-custom
-iw.recipe.cmd = 0.3
-zdhtmlxscheduler = 1.0.0
-z3c.recipe.mkdir = 0.3.1
-imsvdex = 1.0
-elementtreewriter = 1.1
-zope.sqlalchemy = 0.6.1
-# 25-11-2011
-chardet = 1.0.1
-DevAuth = 0.1.2
-Pygments = 1.3.1
-Tempita = 0.5.1
-WebError = 0.10.3
-WSGIProxy = 0.2.2
+zope.testbrowser = 4.0.2
+zope.testing = 4.0.0
+zope.traversing = 3.13.2
+zope.viewlet = 3.7.2
