Corrected postgresql download url and repoze.who version peg

--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -24,7 +24,7 @@ platform_parts =
 
 [postgresql]
 recipe = zc.recipe.cmmi
-url = /home/undesa/cache/postgresql-8.3.17.tar.bz2
+url = http://ftp.postgresql.org/pub/source/v8.3.17/postgresql-8.3.17.tar.gz
 
 [psycopg2]
 recipe = zc.recipe.egg:custom
