Setting index back to dist.bungeni.org; dist now has all the updated pegged packages; removed find-links and set it to just dist.bungeni.org so only dist is the authentic provider of packages

--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -64,14 +64,8 @@ parts =
       
 find-links = 
      http://dist.bungeni.org/bungeni/
-     http://download.zope.org/distribution/
-     http://effbot.org/downloads
-     http://dist.repoze.org/lemonade/dev/simple
-     http://pypi.python.org/pypi/
-     http://pypi.python.org/pypi/SQLAlchemy/0.6.8
-     http://dist.bungeni.org/bungeni/qpy
      
-index = http://pypi.python.org/simple
+index = http://dist.bungeni.org/bungeni
     
 versions = versions
 
