Moved repoze.who authenticator and metadata provider plugins from bungeni.portal to a new package, portal.auth. This is one step towards removing bungeni.main from the buildouts of deliverance and plone. Renamed what was auth.py in bungeni.portal to who.py in portal.auth. Updated plone buildout.cfg and who.ini to reflect this change.

--- a/bungeni.buildout/trunk/who.ini
+++ b/bungeni.buildout/trunk/who.ini
@@ -1,8 +1,8 @@
 [plugin:alchemist]
-use = bungeni.portal.auth:AlchemistWhoPlugin
+use = portal.auth.who:AlchemistWhoPlugin
 
 [plugin:global]
-use = bungeni.portal.auth:GlobalAuthWhoPlugin
+use = portal.auth.who:GlobalAuthWhoPlugin
 
 [plugin:cookie]
 use = repoze.who.plugins.auth_tkt:AuthTktCookiePlugin
@@ -10,7 +10,7 @@ secret = 'bungeni'
 cookie_name = 'wc.cookiecredentials'
 
 [plugin:form]
-use = bungeni.portal.login:FormAuthPlugin
+use = portal.auth.login:FormAuthPlugin
 login_handler_path = /login$
 logout_handler_path = /logout$
 forgetter_name = cookie
