--- a/plone.buildout/trunk/buildout.cfg
+++ b/plone.buildout/trunk/buildout.cfg
@@ -27,7 +27,8 @@ develop =
       ../src/alchemist.ui
       ../src/alchemist.catalyst
       ../src/alchemist.traversal
-      ../src/alchemist.security 
+      ../src/alchemist.security
+      ../src/portal.auth
       
 
 eggs =
@@ -61,7 +62,7 @@ eggs =
     collective.collage.plonetruegallery
     collective.collage.portlets
     collective.portlet.feedmixer
-
+    portal.auth
 
 
  
