--- a/bungeni.buildout/trunk/buildout.cfg
+++ b/bungeni.buildout/trunk/buildout.cfg
@@ -14,6 +14,7 @@ develop =
       src/alchemist.catalyst
       src/alchemist.traversal
       src/alchemist.security
+      src/portal.auth
 
 eggs =
       alchemist.ui
@@ -51,6 +52,8 @@ eggs =
       python-dateutil
       repoze.profile
       appy
+      portal.auth
+
 
 parts = 
       lxml
