--- a/plone.buildout/trunk/who.ini
+++ b/plone.buildout/trunk/who.ini
@@ -1,5 +1,5 @@
 [plugin:alchemist]
-use = bungeni.portal.auth:AlchemistWhoPlugin
+use = portal.auth.who:AlchemistWhoPlugin
 
 [plugin:cookie]
 use = repoze.who.plugins.auth_tkt:AuthTktCookiePlugin
@@ -12,17 +12,11 @@ use = repoze.who.plugins.basicauth:make_plugin
 realm = 'bungeni'
 
 [plugin:form]
-use = bungeni.portal.login:FormAuthPlugin
+use = portal.auth.login:FormAuthPlugin
 login_handler_path = /(login_.*|logged_out)$
 logout_handler_path = /logout$
 forgetter_name = cookie
 rememberer_name = cookie
-
-#[plugin:htpasswd]
-# authentication
-#use = repoze.who.plugins.htpasswd:make_plugin
-#filename = %(here)s/passwd
-#check_fn = repoze.who.plugins.htpasswd:crypt_check
 
 [general]
 request_classifier = repoze.who.classifiers:default_request_classifier
