Switched from using hexagonit.recipe.download to gocept.download for the rabbitmq buildout part as h.r.download has a bug/questionable feature that alters the buildout download-cache property

--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -243,7 +243,8 @@ content =
   ${buildout:bin-directory}/python ${buildout:directory}/data/scripts/admin-password.py
   
 [rabbitmq]
-recipe = hexagonit.recipe.download
+recipe = gocept.download
 url = http://www.rabbitmq.com/releases/rabbitmq-server/v2.7.1/rabbitmq-server-generic-unix-2.7.1.tar.gz
-strip-top-level-dir = true  
-
+strip-top-level-dir = true
+destination = ${buildout:directory}/parts/rabbitmq
+md5sum = 34a5f9fb6f22e6681092443fcc80324f
